--- a/_posts/2022-12-27-诗经札记.md
+++ b/_posts/2022-12-27-诗经札记.md
@@ -5,12 +5,13 @@ description: 读《诗经》中的一些想法札记
 date: 2022-12-27 11:44:01
 ---
 
-《诗经》是我国第一部诗歌总集，收录西周初年至春秋中叶的诗歌三百零五篇，另有六篇有目无文的笙诗。《诗经》的编集过程难于确考，相传古诗有三千多篇，后经孔子删定，用以教授学生。至汉代传习《诗经》的学派有齐、鲁、韩、毛四家，后来三家先后亡佚，只有《毛诗》流传至今。
-《毛诗序》云：“《诗》有六义焉：一曰风，二曰赋，三曰比，四曰兴，五曰雅，六曰颂。”今人一般认为，风、雅、颂指诗歌的体裁，赋、比、兴指诗歌的艺术手法。风是民间乐歌，包括周南、召南、邶、鄘、卫、王、郑、齐、魏、唐、秦、陈、桧、曹、豳等十五国风；雅是朝廷乐歌，分为小雅和大雅；颂是宗庙乐歌，分为周颂、鲁颂、商颂。《诗经》犹如一幅历史画卷，细致生动地反映了周代社会生活的方方面面及先民的思想情感。关于赋、比、兴，朱熹说，赋是“敷陈其事而直言之”，比是“以彼物比此物”，兴是“先言他物以引起所咏之词”。《诗经》是中国古典诗歌的源头，它所孕育的现实主义文学精神和比兴艺术传统，对中国古代文学产生了深远影响。
-本书选文据中华书局三全本《诗经》。
-周南
-关雎
-关关雎鸠①，在河之洲②。窈窕淑女③，君子好逑④。
+> 《诗经》是我国第一部诗歌总集，收录西周初年至春秋中叶的诗歌三百零五篇，另有六篇有目无文的笙诗。《诗经》的编集过程难于确考，相传古诗有三千多篇，后经孔子删定，用以教授学生。至汉代传习《诗经》的学派有齐、鲁、韩、毛四家，后来三家先后亡佚，只有《毛诗》流传至今。
+
+> 《毛诗序》云：“《诗》有六义焉：一曰风，二曰赋，三曰比，四曰兴，五曰雅，六曰颂。”今人一般认为，风、雅、颂指诗歌的体裁，赋、比、兴指诗歌的艺术手法。风是民间乐歌，包括周南、召南、邶、鄘、卫、王、郑、齐、魏、唐、秦、陈、桧、曹、豳等十五国风；雅是朝廷乐歌，分为小雅和大雅；颂是宗庙乐歌，分为周颂、鲁颂、商颂。《诗经》犹如一幅历史画卷，细致生动地反映了周代社会生活的方方面面及先民的思想情感。关于赋、比、兴，朱熹说，赋是“敷陈其事而直言之”，比是“以彼物比此物”，兴是“先言他物以引起所咏之词”。《诗经》是中国古典诗歌的源头，它所孕育的现实主义文学精神和比兴艺术传统，对中国古代文学产生了深远影响。
+
+## 周南
+### 关雎
+#### 关关雎鸠①，在河之洲②。窈窕淑女③，君子好逑④。
 ①关关：鸟的和鸣声。雎（jū）鸠：一种水鸟，相传此鸟雌雄情意专一。
 ②洲：水中陆地。
 ③窈窕（yǎo tiǎo）：美好的样子。
@@ -20,36 +21,31 @@ date: 2022-12-27 11:44:01
 ①思服：思念。
 ②悠哉：忧思不绝。
 ③辗（zhǎn）转反侧：翻来覆去，无法入眠。
-【译文】
-美好愿望难实现，醒来梦中都想念。想来想去思不断，翻来覆去难入眠。
+> 美好愿望难实现，醒来梦中都想念。想来想去思不断，翻来覆去难入眠。
 卷耳
 采采卷耳①，不盈顷筐②。嗟我 人③，寘彼周行④。
 ①卷耳：一种植物，又名苍耳，可食用，也可药用。
 ②顷筐：形如簸箕的浅筐。
 ③嗟（jiē）：语助词。 人：想念的人。
 ④寘：同“置”，放置。彼：指顷筐。周行（háng）：大路。
-【译文】
-采了又采采卷耳，总是不满一浅筐。只因想念远行人，筐儿丢在大路旁。
-樛木
+> 采了又采采卷耳，总是不满一浅筐。只因想念远行人，筐儿丢在大路旁。
+### 樛木
 乐只君子，福履成之①。
 ①成：成就。
-【译文】
-那快乐的君子啊，愿幸福让他成就辉煌。
-桃夭
+> 那快乐的君子啊，愿幸福让他成就辉煌。
+### 桃夭
 桃之夭夭①，灼灼其华②。之子于归③，宜其室家④。
 ①夭夭（yāo）：茂盛，生机勃勃的样子。
 ②灼灼（zhuó）：鲜艳的样子。
 ③之：这。子：指女子，古代女子也称“子”。于：往。归：出嫁。后来称女子出嫁为“于归”。
 ④宜：和顺。室家：家庭。此指夫家。
-【译文】
-桃树叶茂枝繁，花朵粉红灿烂。姑娘就要出嫁，夫家和顺平安。
-兔罝
+> 桃树叶茂枝繁，花朵粉红灿烂。姑娘就要出嫁，夫家和顺平安。
+### 兔罝
 赳赳武夫①，公侯干城②。
 ①赳赳（jiū）：健壮威武的样子。武夫：武士。
 ②公侯：周代统治者分五等爵位，即公、侯、伯、子、男。干：盾。城：即城墙。干、城，都用来防卫。
-【译文】
-那威武雄壮的武士，是捍卫公侯的好屏障。
-汉广
+> 那威武雄壮的武士，是捍卫公侯的好屏障。
+### 汉广
 南有乔木①，不可休思②。汉有游女③，不可求思。汉之广矣，不可泳思④。江之永矣⑤，不可方思⑥。
 ①乔木：高大的树木。
 ②休思：休息。思，语助词，下同。
@@ -57,154 +53,128 @@ date: 2022-12-27 11:44:01
 ④泳：游，泅渡。
 ⑤永：长。
 ⑥方：用木筏渡水。
-【译文】
-南方有树高又高，树下休息难做到。汉江有位好姑娘，要想追求路途遥。汉水浩渺宽又宽，难以游泳到对岸。长江水流急又长，木筏怎能渡过江。
-召南
-草虫
+> 南方有树高又高，树下休息难做到。汉江有位好姑娘，要想追求路途遥。汉水浩渺宽又宽，难以游泳到对岸。长江水流急又长，木筏怎能渡过江。
+## 召南
+### 草虫
 未见君子，忧心忡忡①。
 ①忡忡（chōng）：心中忧愁不安的样子。
-【译文】
-长久不见我夫君，我心忧愁又烦恼。
+> 长久不见我夫君，我心忧愁又烦恼。
 陟彼南山①，言采其薇②。未见君子，我心伤悲。
 ①陟（zhì）：登，升。
 ②薇：一种野菜，古人常采以为食。
-【译文】
-登上高高南山顶，采摘薇菜绿莹莹。长久不见我夫君，心中悲伤一重重。
-小星
+> 登上高高南山顶，采摘薇菜绿莹莹。长久不见我夫君，心中悲伤一重重。
+### 小星
 肃肃宵征①，夙夜在公②。
 ①肃肃：急忙赶路的样子。宵征：夜间走路。
 ②夙夜：早晚。公：公事。
-【译文】
-急急忙忙赶夜路，早晚都为公事忙。
-野有死麕
+> 急急忙忙赶夜路，早晚都为公事忙。
+### 野有死麕
 有女 春，吉士诱之①。
 ①吉士：好青年，指打猎的男子。
-【译文】
-遇到少女春心动，走上前来把话挑。
-何彼 矣
+> 遇到少女春心动，走上前来把话挑。
+### 何彼 矣
 何彼 矣①？华如桃李②。
 ① （nóng）：浓艳、盛大貌。
 ②华如桃李：如桃李之花，红白艳丽。
-【译文】
-怎么如此的浓艳漂亮？像那桃李花开一样芬芳。
-邶风
-柏舟
+> 怎么如此的浓艳漂亮？像那桃李花开一样芬芳。
+## 邶风
+### 柏舟
 耿耿不寐①，如有隐忧②。
 ①耿耿：不安的样子。
 ②隐忧：藏在内心的忧痛。
-【译文】
-心中焦虑不成眠，因有隐忧在心头。
+> 心中焦虑不成眠，因有隐忧在心头。
 我心匪鉴①，不可以茹②。
 ①匪：同“非”。鉴：镜子。
 ②茹（rú）：容纳。
-【译文】
-我的心儿不是镜，岂能美丑都可容。
+> 我的心儿不是镜，岂能美丑都可容。
 我心匪石，不可转也。我心匪席，不可卷也。威仪棣棣
 ①，不可选也②。
 ①棣棣（dì）：安和的样子。
 ②选：朱熹《诗集传》：“简择也。”即挑剔之意。
-【译文】
-我的心儿不是石，不可随意来转移。我的心儿非草席，不可随意来卷起。仪容举止有尊严，没有什么可挑剔。
+> 我的心儿不是石，不可随意来转移。我的心儿非草席，不可随意来卷起。仪容举止有尊严，没有什么可挑剔。
 忧心悄悄①，愠于群小②。
 ①悄悄：忧愁的样子。
 ②愠（yùn）：怨恨。
-【译文】
-忧愁缠绕心烦闷，群小视我如仇人。
+> 忧愁缠绕心烦闷，群小视我如仇人。
 日居月诸①，胡迭而微②？心之忧矣，如匪浣衣。静言思之，不能奋飞。
 ①居、诸：均为语助词，有感叹意。
 ②胡：何。迭：更迭，轮番。微：亏缺，指日蚀、月蚀。
-【译文】
-问问太阳和月亮，为啥轮番暗无光？心头烦忧去不掉，就像穿着脏衣裳。仔细考虑反复想，无法展翅高飞翔。
-绿衣
+> 问问太阳和月亮，为啥轮番暗无光？心头烦忧去不掉，就像穿着脏衣裳。仔细考虑反复想，无法展翅高飞翔。
+### 绿衣
 心之忧矣，曷维其已①！
 ①曷：何。维：语助词。已：停，止。
-【译文】
-看到此衣心忧伤，悲痛之情何时已！
+> 看到此衣心忧伤，悲痛之情何时已！
 我思古人①，实获我心！
 ①古人：故人，指作者的妻子。
-【译文】
-思念我的亡妻啊，事事都合我心意。
-燕燕
+> 思念我的亡妻啊，事事都合我心意。
+### 燕燕
 燕燕于飞①，差池其羽②。之子于归，远送于野。瞻望弗及，泣涕如雨。
 ①燕燕：鸟名，即燕子。于：语助词。
 ②差（cī）池：参差不齐的样子。
-【译文】
-燕子双双天上翔，参差不齐展翅膀。她回娘家永不返，远送她到旷野上。渐渐远去望不见，涕泣如雨泪沾裳。
+> 燕子双双天上翔，参差不齐展翅膀。她回娘家永不返，远送她到旷野上。渐渐远去望不见，涕泣如雨泪沾裳。
 终温且惠①，淑慎其身②。
 ①终：既。温：温柔。且：又。惠：和顺。
 ②淑：善良。慎：谨慎。
-【译文】
-性格温柔又和顺，行为善良又谨慎。
-击鼓
+> 性格温柔又和顺，行为善良又谨慎。
+### 击鼓
 死生契阔①，与子成说②。执子之手，与子偕老。
 ①契：合。阔：离。
 ②子：你。这里指作者的妻子。成说：约定誓言。
-【译文】
-生生死死不分离，咱们誓言记心里。我曾紧握你的手，到老和你在一起。
-凯风
+> 生生死死不分离，咱们誓言记心里。我曾紧握你的手，到老和你在一起。
+### 凯风
 凯风自南①，吹彼棘心②。棘心夭夭③，母氏劬劳④。
 ①凯风：和风。这里喻母爱。
 ②棘心：酸枣树初发的嫩芽。这里喻子。
 ③夭夭：树木嫩壮的样子。
 ④劬（qú）劳：劳苦。
-【译文】
-和风煦煦自南方，吹在枣树嫩芽上。枣树芽心嫩又壮，母亲养儿辛苦忙。
-雄雉
+> 和风煦煦自南方，吹在枣树嫩芽上。枣树芽心嫩又壮，母亲养儿辛苦忙。
+### 雄雉
 不忮不求①，何用不臧②！
 ①忮（zhì）：疾害。或以为“希求”。求：贪求。
 ②何用：何以，为何。不臧：不善，不好。
-【译文】
-不贪荣名不求利，哪里还会遭祸殃！
-谷风
+> 不贪荣名不求利，哪里还会遭祸殃！
+### 谷风
 黾勉同心①，不宜有怒。
 ①黾（mǐn）勉：努力。
-【译文】
-夫妻共勉结同心，不该动怒不相容。
+> 夫妻共勉结同心，不该动怒不相容。
 德音莫违①，“及尔同死”。
 ①德音：指丈夫曾对她说过的好话。
-【译文】
-往日良言休抛弃，“到死和你不离分”。
+> 往日良言休抛弃，“到死和你不离分”。
 就其深矣，方之舟之。就其浅矣，泳之游之。
-【译文】
-好比过河河水深，过河就用筏和船。又如河水清且浅，我就游泳到对岸。
+> 好比过河河水深，过河就用筏和船。又如河水清且浅，我就游泳到对岸。
 何有何亡①，黾勉求之。凡民有丧②，匍匐救之。
 ①亡：无。
 ②民：人。这里指邻人。
-【译文】
-家里有这没有那，尽心尽力来备办。左邻右舍有灾难，奔走救助不迟延。
-北风
+> 家里有这没有那，尽心尽力来备办。左邻右舍有灾难，奔走救助不迟延。
+### 北风
 惠而好我，携手同归①。
 ①同归：一同走。
-【译文】
-赞同我的好朋友，携手同去好地方。
+> 赞同我的好朋友，携手同去好地方。
 莫赤匪狐①，莫黑匪乌②。
 ①莫赤匪狐：狐狸没有不是红色的。
 ②莫黑匪乌：乌鸦没有不是黑色的。
-【译文】
-天下狐狸毛皆赤，天下乌鸦尽皆黑。
-鄘风墙有茨
+> 天下狐狸毛皆赤，天下乌鸦尽皆黑。
+## 鄘风
+### 墙有茨
 中冓之言①，不可详也②！所可详也，言之长也！
 ①中冓（gòu）：宫闱，宫廷内部。
 ②详：细说。
-【译文】
-宫中私房话，不可细说啊！如果说出来，丑事太多啊！
-相鼠
+> 宫中私房话，不可细说啊！如果说出来，丑事太多啊！
+### 相鼠
 相鼠有皮①，人而无仪②。人而无仪，不死何为③？
 ①相：看。
 ②仪：礼仪，威仪。
 ③何为：为何，做什么。
-【译文】
-看那老鼠还有皮，做人怎能没礼仪。做人如果没礼仪，不如早早就死去。
-卫风
-淇奥
+> 看那老鼠还有皮，做人怎能没礼仪。做人如果没礼仪，不如早早就死去。
+## 卫风
+### 淇奥
 瞻彼淇奥①，绿竹猗猗②。有匪君子③，如切如磋④，如琢如磨。
 ①瞻：看。淇：淇水。奥（yù）：又作“澳”或“隩”，水岸深曲处。
 ②绿竹：绿，也作“菉”，又名王刍。竹，即萹竹。是一种草。一说指绿色之竹。朱熹《诗集传》：“绿，色也。淇上多竹，汉世犹然，所谓淇园之竹是也。”猗猗（yī）：美盛貌。
 ③有匪：即“匪匪”，有文采、有才华的样子。匪，通“斐”。
 ④切、磋：与下句中“琢”“磨”皆治器的方法。用以比喻君子的修养方法。毛传：“治骨曰切，象（象牙）曰磋，玉曰琢，石曰磨。”
-【译文】
-眺望淇水岸弯弯，绿竹葱葱映两岸。文采风流的君子，如同象牙经切磋，如同美玉经琢磨。
-硕人
+> 眺望淇水岸弯弯，绿竹葱葱映两岸。文采风流的君子，如同象牙经切磋，如同美玉经琢磨。
+### 硕人
 手如柔荑①，肤如凝脂②，领如蝤蛴③，齿如瓠犀④，螓首蛾眉⑤。巧笑倩兮⑥，美目盼兮⑦。
 ①柔荑（tí）：柔嫩的初生白茅的幼苗。
 ②凝脂：凝结的脂肪，形容肤色光润。
@@ -214,265 +184,227 @@ date: 2022-12-27 11:44:01
 ⑥倩（qiàn）：笑时脸上的酒窝。
 ⑦盼：眼睛黑白分明的样子。
 【译文】手指纤纤如嫩荑，皮肤白皙如凝脂，美丽脖颈像蝤蛴，牙如瓠籽白又齐，额头方正眉弯细。微微一笑酒窝妙，美目顾盼眼波俏。
-氓
+### 氓
 于嗟女兮①，无与士耽②。士之耽兮，犹可说也③。女之耽兮，不可说也。
 ①于嗟：感叹词。
 ②耽（dān）：沉醉，迷恋。
 ③说：通“脱”，摆脱，丢开。
-【译文】
-年轻姑娘听我言，别把男人太迷恋。男人如把女人恋，说甩就甩他不管。女人若是恋男人，就会永远记心间。
+> 年轻姑娘听我言，别把男人太迷恋。男人如把女人恋，说甩就甩他不管。女人若是恋男人，就会永远记心间。
 女也不爽①，士贰其行②。士也罔极③，二三其德④。
 ①爽：差错，过失。
 ②贰：不专一。
 ③罔极：没有准则。罔，无。极，止。
 ④二三其德：三心二意。指男子道德行为有变化。
-【译文】
-我做妻子没过错，你的行为却两样。反复无常没准则，前后不一少德行。
+> 我做妻子没过错，你的行为却两样。反复无常没准则，前后不一少德行。
 夙兴夜寐①，靡有朝矣②。
 ①夙兴夜寐：早起晚睡。
 ②靡有朝矣：不止某一天如此。
-【译文】
-早起晚睡不怕苦，累死累活非一朝。
+> 早起晚睡不怕苦，累死累活非一朝。
 总角之宴①，言笑晏晏②。信誓旦旦③，不思其反④。
 ①总角：束发。古时儿童把头发扎成髻。这里指童年。宴：安乐。
 ②晏晏：温和融洽。
 ③信誓：真诚的誓言。旦旦：诚恳的样子。
 ④不思：想不到。反：反复，变心。
-【译文】
-回忆两小无猜时，说说笑笑乐得欢。海誓山盟犹在耳，未料你却把心变。
-伯兮
+> 回忆两小无猜时，说说笑笑乐得欢。海誓山盟犹在耳，未料你却把心变。
+### 伯兮
 自伯之东，首如飞蓬①。岂无膏沐②？谁适为容③？
 ①飞蓬：形容头发如乱草。
 ②膏：润发油。沐：洗。
 ③适：悦，喜欢。
-【译文】
-自从夫君去东征，我发散乱如飞蓬。难道没有润发油？叫我为谁来美容？
-木瓜
+> 自从夫君去东征，我发散乱如飞蓬。难道没有润发油？叫我为谁来美容？
+### 木瓜
 投我以木桃①，报之以琼瑶②。匪报也，永以为好也！
 ①投：赠。
 ②报：报答，回赠。琼瑶：玉名。
-【译文】
-赠给我一个木桃，我用美玉来回报。不是仅仅为回报，表示永和他友好。
-王风
-黍离
+> 赠给我一个木桃，我用美玉来回报。不是仅仅为回报，表示永和他友好。
+## 王风
+### 黍离
 彼黍离离①，彼稷之苗。行迈靡靡②，中心摇摇③。知我者，谓我心忧；不知我者，谓我何求。悠悠苍天④，此何人哉？
 ①黍（shǔ）：北方的一种农作物，形似小米，有黏性。离离：一行行的。
 ②靡靡（mǐ）：走路缓慢的样子。
 ③摇摇：心神不定的样子。
 ④悠悠：遥远的样子。
-【译文】
-看那黍子一行行，高粱苗儿也在长。迈着步子走且停，心里只有忧和伤。知我者，说我心忧；不知者，说我有求。高高在上苍天啊，何人害我离家走！
-采葛
+> 看那黍子一行行，高粱苗儿也在长。迈着步子走且停，心里只有忧和伤。知我者，说我心忧；不知者，说我有求。高高在上苍天啊，何人害我离家走！
+### 采葛
 一日不见，如三月兮！
-【译文】
-一天没看见她，好像隔了三月啊！
+> 一天没看见她，好像隔了三月啊！
 一日不见，如三秋兮①！
 ①三秋：三个秋季，即九个月。此处用“秋”字，因秋天草木摇落，秋风萧瑟，易生离情别绪，引发感慨之情。
-【译文】
-一天不见面，好像隔了三秋啊！
-大车
+> 一天不见面，好像隔了三秋啊！
+### 大车
 岂不尔思①？畏子不敢②。
 ①尔：你。
 ②子：指其所爱的男子。
-【译文】
-难道是我不想你？相爱就怕你不敢。
+> 难道是我不想你？相爱就怕你不敢。
 穀则异室①，死则同穴②。谓予不信③，有如皦日④。
 ①穀：活着。异室：两地分居。
 ②同穴：合葬在一个墓穴。
 ③予：我。
 ④有如皦（jiǎo）日：有此白日。如，此。皦，白，光明。
-【译文】
-活着不能在一室，死后同埋一个坑。我说的话你不信，就让太阳来作证。
-郑风将仲子
+> 活着不能在一室，死后同埋一个坑。我说的话你不信，就让太阳来作证。
+## 郑风
+### 将仲子
 人之多言，亦可畏也。
-【译文】
-闲话也能把人杀，这事真叫我害怕。
-羔裘
+> 闲话也能把人杀，这事真叫我害怕。
+### 羔裘
 彼其之子，舍命不渝①。
 ①舍命：舍弃生命。不渝：不变。
-【译文】
-就是这样一个人，不怕牺牲为君劳。
-女曰鸡鸣
+> 就是这样一个人，不怕牺牲为君劳。
+### 女曰鸡鸣
 宜言饮酒①，与子偕老。琴瑟在御②，莫不静好③。
 ①宜：《尔雅·释言》：“肴也。”即菜肴。
 ②御：用。此处是弹奏的意思。古代常用琴瑟的合奏象征夫妇同心和好。
 ③静好：安好。
-【译文】
-就着美味来饮酒，恩爱生活百年长。你弹琴来我鼓瑟，夫妻安好心欢畅。
-风雨
+> 就着美味来饮酒，恩爱生活百年长。你弹琴来我鼓瑟，夫妻安好心欢畅。
+### 风雨
 风雨如晦①，鸡鸣不已。既见君子，云胡不喜？
 ①晦：昏暗。
-【译文】
-风雨连连天昏濛，鸡儿报晓鸣不停。终于看见丈夫归，心里怎能不高兴？
-子衿
+> 风雨连连天昏濛，鸡儿报晓鸣不停。终于看见丈夫归，心里怎能不高兴？
+### 子衿
 青青子衿①，悠悠我心②。纵我不往，子宁不嗣音③？
 ①青衿（jīn）：古代学生穿的服装。衿，衣领。
 ②悠悠：忧思不断的样子。
 ③嗣音：寄音讯。嗣，通“贻”，寄。
 【译文】衣领青青好青年，我心悠悠总思念。纵然我没去找你，怎不给我把信传？
-扬之水
+### 扬之水
 无信人之言，人实迋女①。
 ①迋：通“诳”，欺骗。
-【译文】
-不要轻信别人言，他们实想把你骗。
+> 不要轻信别人言，他们实想把你骗。
 无信人之言，人实不信①。
 ①不信：不可信。
-【译文】
-不要轻信别人言，他们实在信不着。
-野有蔓草
+> 不要轻信别人言，他们实在信不着。
+### 野有蔓草
 野有蔓草，零露瀼瀼①。有美一人，婉如清扬。
 ①瀼瀼（ráng）：露水多的样子。
-【译文】
-野草蔓蔓连成片，草上露珠大又圆。有位美女路上走，眉清目秀美容颜。
-齐风
-南山
+> 野草蔓蔓连成片，草上露珠大又圆。有位美女路上走，眉清目秀美容颜。
+## 齐风
+### 南山
 析薪如之何①？匪斧不克。取妻如之何？匪媒不得。
 ①析薪：劈柴。
-【译文】
-要劈柴火怎么办？没有斧子劈不好。要娶媳妇怎么办？没有媒人办不到。
-甫田
+> 要劈柴火怎么办？没有斧子劈不好。要娶媳妇怎么办？没有媒人办不到。
+### 甫田
 无思远人①，劳心忉忉②。
 ①远人：远方的人。
 ②劳：忧。忉忉：忧伤貌。
-【译文】
-不要想念远方人，忧伤劳心实熬煎。
-魏风
-伐檀
+> 不要想念远方人，忧伤劳心实熬煎。
+## 魏风
+### 伐檀
 彼君子兮，不素餐兮①！
 ①素餐：白吃饭。
-【译文】
-那些老爷公子们，不是白白吃闲饭？
-硕鼠
+> 那些老爷公子们，不是白白吃闲饭？
+### 硕鼠
 硕鼠硕鼠，无食我黍！三岁贯女①，莫我肯顾②。逝将去女
 ③，适彼乐土④。乐土乐土，爰得我所⑤。
 ①贯：“宦”的假借字，侍奉、养活的意思。女：你。
 ②莫我肯顾：“莫肯顾我”的倒装。顾，顾及，照管。 ③逝：通“誓”，发誓。去：离开。
 ④适：往。乐土：安居乐业的地方。
 ⑤爰：乃，就。
-【译文】
-大老鼠啊大老鼠，不要偷吃我的黍！多年辛苦养活你，我的死活你不顾。发誓从此离开你，到那理想的乐土。乐土啊美好乐土，那是安居好去处。
-唐风
-蟋蟀
+> 大老鼠啊大老鼠，不要偷吃我的黍！多年辛苦养活你，我的死活你不顾。发誓从此离开你，到那理想的乐土。乐土啊美好乐土，那是安居好去处。
+## 唐风
+### 蟋蟀
 无已大康①，职思其忧②。好乐无荒③，良士休休④。
 ①已：甚，过度。大康：即“泰康”，过于安乐。
 ②职：还要。
 ③好：喜好。荒：荒废。
 ④休休：安闲的样子。
-【译文】
-行乐不可太过度，还有国事让人忧。正业不废又娱乐，贤良之士乐悠悠。
-绸缪
+> 行乐不可太过度，还有国事让人忧。正业不废又娱乐，贤良之士乐悠悠。
+### 绸缪
 今夕何夕，见此良人①？子兮子兮，如此良人何②？
 ①良人：古代妇女称其夫为“良人”。
 ②如此良人何：如……何，犹“奈何”，怎么样。
-【译文】
-今夜到底是何夜，能和这样好人见？你呀！你呀！对此好人怎么办？
-羔裘
+> 今夜到底是何夜，能和这样好人见？你呀！你呀！对此好人怎么办？
+### 羔裘
 岂无他人？维子之好。
-【译文】
-难道世上没有别的人，只因你多年对我好。
-鸨羽
+> 难道世上没有别的人，只因你多年对我好。
+### 鸨羽
 悠悠苍天①，曷其有极②？
 ①悠悠：高远的样子。
 ②曷：何时。
-【译文】
-悠悠苍天在上方，服役期限有多长？
-秦风
-车邻
+> 悠悠苍天在上方，服役期限有多长？
+## 秦风
+### 车邻
 今者不乐①，逝者其耋②。
 ①今者：现在。
 ②逝者：与“今者”相对，指将来，他日。耋（dié）：《释名》：“八十曰耋，耋，铁也，皮肤变黑色如铁也。”
-【译文】
-现在行乐不及时，转眼老迈有何乐。
+> 现在行乐不及时，转眼老迈有何乐。
 今者不乐，逝者其亡①。
 ①亡：死亡。
-【译文】
-现在行乐不及时，时光逝去命即亡。
-小戎
+> 现在行乐不及时，时光逝去命即亡。
+### 小戎
 言念君子①，温其如玉②。
 ①言：语助词。君子：这里是妇人称其丈夫。
 ②温其：即“温然”，温和貌。美玉是温和的，俗称“温玉”。
-【译文】
-思念夫君人品好，温和就像玉一样。
+> 思念夫君人品好，温和就像玉一样。
 言念君子，载寝载兴①。厌厌良人②，秩秩德音③。
 ①载寝载兴：此句言起来又睡下，睡下又起来，反复不能入睡。
 载，语助词。
 ②厌厌：安静柔和貌。
 ③秩秩：有序貌，谓其懂礼节有教养。德音：好声誉。
-【译文】
-思念夫君人品好，若醒若睡心焦躁。安静柔和好夫君，彬彬有礼声誉高。
-蒹葭
+> 思念夫君人品好，若醒若睡心焦躁。安静柔和好夫君，彬彬有礼声誉高。
+### 蒹葭
 蒹葭苍苍①，白露为霜②。所谓伊人③，在水一方④。
 ①蒹（jiān）：没长穗的芦苇。葭（jiā）：初生的芦苇。苍苍：茂盛的样子。
 ②白露：露水是无色的，因凝结成霜呈现白色，所以称“白露”。
 ③所谓：所说的。伊人：这个人。
 ④一方：那一边，指对岸。
-【译文】
-河畔芦苇碧苍苍，深秋白露结成霜。我所思念的人儿，就在水的那一方。
+> 河畔芦苇碧苍苍，深秋白露结成霜。我所思念的人儿，就在水的那一方。
 溯洄从之①，道阻且长②。
 ①溯（sù）：沿着岸向上游走。洄（huí）：逆流而上。从：跟踪追寻。
 ②阻：险阻。
-【译文】
-逆着水流沿岸找，道路艰险又漫长。
-黄鸟
+> 逆着水流沿岸找，道路艰险又漫长。
+### 黄鸟
 彼苍者天，歼我良人①！如可赎兮，人百其身②！
 ①良人：好人，善人。
 ②人百其身：用百人赎他一人。
-【译文】
-浩浩苍天在上方，杀我好人不应当。如果可以赎他命，愿以百人来抵偿。
-晨风
+> 浩浩苍天在上方，杀我好人不应当。如果可以赎他命，愿以百人来抵偿。
+### 晨风
 未见君子，忧心靡乐。如何如何①？忘我实多！
 ①如何：奈何，怎么办。
-【译文】
-许久未见我夫君，愁闷不乐天天想。怎么办啊怎么办？难道他已把我忘！
-无衣
+> 许久未见我夫君，愁闷不乐天天想。怎么办啊怎么办？难道他已把我忘！
+### 无衣
 岂曰无衣？与子同袍①。王于兴师②，修我戈矛。与子同仇！
 ①袍：长衣。就是斗篷，白天当衣，夜里当被。
 ②王：指周天子。一说指秦国国君。于：语助词。兴师：起兵。
-【译文】
-谁说我们没衣裳？战袍共同伙着穿。国王兴兵要征讨，赶快修好戈和矛。你我一同把仇报。
-陈风东门之杨
+> 谁说我们没衣裳？战袍共同伙着穿。国王兴兵要征讨，赶快修好戈和矛。你我一同把仇报。
+## 陈风
+### 东门之杨
 东门之杨，其叶牂牂①。昏以为期②，明星煌煌③。
 ①牂牂（zāng）：枝叶茂盛的样子。
 ②昏：黄昏。期：约定。
 ③明星：明亮的星星。一说指启明星。煌煌：明亮的样子。
-【译文】
-东门外面有白杨，枝繁叶茂好地方。相约黄昏来相会，等到众星闪闪亮。
-月出
+> 东门外面有白杨，枝繁叶茂好地方。相约黄昏来相会，等到众星闪闪亮。
+### 月出
 月出皎兮①，佼人僚兮②。舒窈纠兮③，劳心悄兮④。
 ①皎：形容月光清澈明亮。
 ②佼（jiǎo）：美好。僚（liǎo）：“嫽”的假借字，娇美的样子。
 ③舒：缓，形容女子端庄文静。窈纠（yǎo jiǎo）：联绵词，形容女子轻盈柔美的姿 。
 ④劳：忧。悄：忧愁的样子。
-【译文】
-明月皎皎出天空，美人娇美体轻盈。缓步慢走多妖娆，想她使我心焦躁。
-泽陂
+> 明月皎皎出天空，美人娇美体轻盈。缓步慢走多妖娆，想她使我心焦躁。
+### 泽陂
 有美一人，伤如之何①？寤寐无为②，涕泗滂沱③。
 ①伤：因思念而忧伤。
 ②无为：无办法。
 ③涕：眼泪。泗：鼻涕。滂沱（pāng tuó）：本意是雨下得大，此处形容泪涕俱下的样子。
-【译文】
-那边有个美人儿，我爱他（她）爱得没办法。日夜想他（她）难入睡，哭得眼泪哗啦啦。
-桧风
-羔裘
+> 那边有个美人儿，我爱他（她）爱得没办法。日夜想他（她）难入睡，哭得眼泪哗啦啦。
+## 桧风
+### 羔裘
 岂不尔思？我心忧伤！
-【译文】
-怎能让我不忧思？思念使我心忧伤！
+> 怎能让我不忧思？思念使我心忧伤！
 隰有苌楚
 隰有苌楚①，猗傩其枝②。夭之沃沃③，乐子之无知④。
 ①隰（xí）：低湿的地方。苌（cháng）楚：蔓生植物，又叫羊桃、猕猴桃。
 ②猗傩（ē nuó）：义同“婀娜”，茂盛而柔美的样子。 ③夭：少。指苌楚处于茁壮成长时期。沃沃：形容叶子润泽的样子。
 ④乐：喜。这里有羡慕之意。子：指苌楚。
-【译文】
-低洼地上长羊桃，蔓长藤绕枝繁茂。鲜嫩润泽长势好，羡慕你没有知觉不烦恼。
-曹风
-鸤鸠
+> 低洼地上长羊桃，蔓长藤绕枝繁茂。鲜嫩润泽长势好，羡慕你没有知觉不烦恼。
+## 曹风
+### 鸤鸠
+> 鸤鸠 布谷鸟
 淑人君子，其仪一兮①。其仪一兮，心如结兮②。
 ①仪：威仪，即今言风度、仪容。一：始终如一。
 ②结：凝结，固结。言心之坚定。
-【译文】
-贤明高尚的君子，仪容始终 美好。仪容始终 美好，内心坚定有节操。
-豳风
-七月
+> 贤明高尚的君子，仪容始终 美好。仪容始终 美好，内心坚定有节操。
+## 豳风
+### 七月
 七月流火①，九月授衣②。春日载阳③，有鸣仓庚④。女执懿筐⑤，遵彼微行⑥，爰求柔桑⑦。春日迟迟，采蘩祁祁⑧。女心伤悲，殆及公子同归⑨。
 ①流：向下行。火：星名，亦称“大火”。每年夏历六月此星出现于正南方，位置 高，七月以后就偏西向下，所以称“流火”。
 ②授衣：把裁制冬衣的差事分配给妇女。
@@ -483,166 +415,137 @@ date: 2022-12-27 11:44:01
 ⑦爰（yuán）：于是。柔桑：嫩桑叶。
 ⑧蘩（fán）：白蒿。祁祁（qí）：很多的样子。
 ⑨殆（dài）：怕。
-【译文】
-七月火星偏西方，九月叫人缝衣裳。春天的太阳暖洋洋，黄莺儿枝头把歌唱。姑娘提着深竹筐，沿着小路采摘忙，专采那些柔嫩桑。春日的白天真是长，采来的蒿叶一筐筐。采蒿姑娘心悲伤，怕那公子把我抢。
+> 七月火星偏西方，九月叫人缝衣裳。春天的太阳暖洋洋，黄莺儿枝头把歌唱。姑娘提着深竹筐，沿着小路采摘忙，专采那些柔嫩桑。春日的白天真是长，采来的蒿叶一筐筐。采蒿姑娘心悲伤，怕那公子把我抢。
 七月在野，八月在宇，九月在户，十月蟋蟀入我床下。
-【译文】
-七月蟋蟀野外鸣，八月屋檐底下唱，九月进到屋里面，十月来到床下藏。
+> 七月蟋蟀野外鸣，八月屋檐底下唱，九月进到屋里面，十月来到床下藏。
 鸱鸮
 恩斯勤斯①，鬻子之闵斯②。
 ①恩斯勤斯：恩，《鲁诗》作“殷”，“恩”与“殷”意同，
 “殷”“勤”在这里有尽心、勤苦之意。斯，语助词。
 ②鬻（yù）子之闵（mǐn）斯：此句意为因抚育小鸟而忧心。鬻，通“育”，养育。闵，忧苦。
-【译文】
-辛辛苦苦来抚育，为了儿女我心焦。
+> 辛辛苦苦来抚育，为了儿女我心焦。
 迨天之未阴雨①，彻彼桑土②，绸缪牖户③。
 ①迨（dài）：趁着。
 ②彻：取。桑土：即“桑杜”，桑根。土，《韩诗》作“杜”。
 ③绸缪（móu）：缠绵，缠绕。这里有修补之意。牖（yǒu）户：窗和门。这里代指鸟窝。
-【译文】
-趁着天晴没下雨，赶快剥点桑根皮，把那门窗修补好。
-东山
+> 趁着天晴没下雨，赶快剥点桑根皮，把那门窗修补好。
+### 东山
 我徂东山①，慆慆不归②。我来自东，零雨其濛③。
 ①徂：去，往。东山：诗中出征者服役的地方。
 ②慆慆（tāo）：长久。
 ③零雨：细雨。其濛：即“濛濛”。
-【译文】
-我到东山去打仗，长期不能回故乡。今日我从东方回，濛濛细雨洒身上。
-伐柯
+> 我到东山去打仗，长期不能回故乡。今日我从东方回，濛濛细雨洒身上。
+### 伐柯
 伐柯如何①？匪斧不克②。取妻如何③？匪媒不得。
 ①伐：砍伐。柯：斧柄。
 ②匪：同“非”。克：能。
 ③取妻：即“娶妻”。
-【译文】
-要做斧柄怎么办？没有斧头可不成。要娶妻子怎么办？没有媒人可不行。
+> 要做斧柄怎么办？没有斧头可不成。要娶妻子怎么办？没有媒人可不行。
 伐柯伐柯，其则不远①。
 ①则：法则，规则。《礼记·中庸》：“‘伐柯伐柯，其则不远。’执柯以伐柯，睨而视之，犹以为远，故君子以人治人，改而止。”
-【译文】
-做斧柄呀做斧柄，规则离你并不远。
-小雅
-鹿鸣
+> 做斧柄呀做斧柄，规则离你并不远。
+## 小雅
+### 鹿鸣
 呦呦鹿鸣①，食野之苹。我有嘉宾，鼓瑟吹笙。
 ①呦呦（yōu）：鹿鸣叫的声音。
-【译文】
-鹿儿呦呦不停叫，呼唤同伴吃苹草。我有嘉宾满客厅，为他鼓瑟又吹笙。
+> 鹿儿呦呦不停叫，呼唤同伴吃苹草。我有嘉宾满客厅，为他鼓瑟又吹笙。
 人之好我，示我周行①。
 ①示：告诉。周行：大路。此处指处事应遵循的正确道理。
-【译文】
-各位宾朋都爱我，讲明道理指方向。
+> 各位宾朋都爱我，讲明道理指方向。
 我有嘉宾，德音孔昭①。视民不恌②，君子是则是效③。
 ①德音：符合道理的话。孔：很。昭：明。
 ②视：同“示”。不恌（tiāo）：不轻薄。
 ③则：法则，榜样。效：仿效。
-【译文】
-我有嘉宾满客厅，谈吐高雅道理明。示人宽厚不轻薄，君子学习好楷模。
-四牡
+> 我有嘉宾满客厅，谈吐高雅道理明。示人宽厚不轻薄，君子学习好楷模。
+### 四牡
 王事靡盬①，我心伤悲。
 ①靡盬（gǔ）：没有止息，没完没了。
-【译文】
-国家公事办不完，让我心中多悲伤。
-常棣
+> 国家公事办不完，让我心中多悲伤。
+### 常棣
 常棣之华①，鄂不 ②。凡今之人，莫如兄弟。
 ①常棣（dì）：木名，一作“棠棣”，又名郁李。
 ②鄂：通“萼”，即花萼。不（fū）：花托。 （wěi）：鲜明的样子。
-【译文】
-棠棣之花真鲜艳，花萼花蒂紧相连。你看如今世上人，没人能比兄弟亲。
+> 棠棣之花真鲜艳，花萼花蒂紧相连。你看如今世上人，没人能比兄弟亲。
 死丧之威①，兄弟孔 ②。原隰裒矣③，兄弟求矣。
 ①威：通“畏”。
 ②孔：甚。 ：思念。
 ③原：高平之地。隰（xí）：低湿之地。裒（póu）：聚集。
-【译文】
-生老病死 可怕，只有兄弟 关心。聚土成坟在荒原，只有兄弟来相寻。
+> 生老病死 可怕，只有兄弟 关心。聚土成坟在荒原，只有兄弟来相寻。
 脊令在原①，兄弟急难。每有良朋②，况也永叹③。
 ①脊令：鸟名，即“鹡鸰”，亦名雝渠。郑笺：“雝渠，水鸟，而今在原，失其常处，则飞则鸣求其类，天性也。犹兄弟之于急难。”原：平原。
 ②每：虽。
 ③况：增加之意。永：长。
-【译文】
-鹡鸰飞落在高原，兄弟急忙来救难。虽然有些好朋友，你遭难时只长叹。
+> 鹡鸰飞落在高原，兄弟急忙来救难。虽然有些好朋友，你遭难时只长叹。
 兄弟阋于墙①，外御其务②。每有良朋，烝也无戎③。
 ①阋（xì）：争斗。墙：墙内，家庭之内。
 ②外：墙外。务：通“侮”。
 ③烝：久，长久。一说为发语词。戎：帮助。
-【译文】
-兄弟在家虽争吵，外侮面前定携手。虽然也有好朋友，时间久了也难助。
+> 兄弟在家虽争吵，外侮面前定携手。虽然也有好朋友，时间久了也难助。
 丧乱既平，既安且宁。虽有兄弟，不如友生①。
 ①友生：朋友。生，语助词。
-【译文】
-丧乱之事既平定，日子平安又宁静。这时虽有亲兄弟，朋友表现更热情。
+> 丧乱之事既平定，日子平安又宁静。这时虽有亲兄弟，朋友表现更热情。
 妻子好合，如鼓瑟琴。兄弟既翕①，和乐且湛②。
 ①翕（xī）：合，聚合。
 ②湛（dān）：喜乐。
-【译文】
-夫唱妇随妻子好，琴瑟合鸣同到老。兄弟感情也融洽，全家聚合乐陶陶。
-伐木
+> 夫唱妇随妻子好，琴瑟合鸣同到老。兄弟感情也融洽，全家聚合乐陶陶。
+### 伐木
 伐木丁丁，鸟鸣嘤嘤。出自幽谷，迁于乔木。
-【译文】
-伐木之声叮叮叮，群鸟鸣叫声嘤嘤。鸟儿来自深山谷，飞来落在高树丛。
+> 伐木之声叮叮叮，群鸟鸣叫声嘤嘤。鸟儿来自深山谷，飞来落在高树丛。
 嘤其鸣矣，求其友声①。相彼鸟矣，犹求友声。矧伊人矣
 ②，不求友生③？
 ①友声：同类的声音。
 ②矧（shěn）：况且。伊人：是人，这人。
 ③友生：朋友。
-【译文】
-鸟儿嘤嘤鸣不停，为了寻求友与朋。看它只是一群鸟，还有嘤嘤求友声。何况我们是人类，哪能无友度一生？
-天保
+> 鸟儿嘤嘤鸣不停，为了寻求友与朋。看它只是一群鸟，还有嘤嘤求友声。何况我们是人类，哪能无友度一生？
+### 天保
 天保定尔，以莫不兴①。如山如阜②，如冈如陵③。如川之方至④，以莫不增⑤。
 ①兴：兴盛。
 ②阜（fù）：高丘。
 ③陵：丘陵。
 ④如川之方至：朱熹《诗集传》：“川之方至，言其盛长之未可量也。”川，蔡邕曰：“众流注海曰川。”
 ⑤增：增加。
-【译文】
-上天保佑您安宁，没有什么不兴盛。福瑞宛如高山岭，绵延就像冈和陵。又如江河滚滚来，没有什么不日增。
+> 上天保佑您安宁，没有什么不兴盛。福瑞宛如高山岭，绵延就像冈和陵。又如江河滚滚来，没有什么不日增。
 如月之恒①，如日之升。如南山之寿，不骞不崩②。如松柏之茂，无不尔或承③。
 ①恒：陈奂《诗毛氏传疏》释为“月上弦之貌”，有渐趋圆满之势。
 ②骞：亏损。崩：崩溃。
 ③或承：即“是承”。承，继承，承受。
-【译文】
-您像上弦月光明，您像太阳正东升。您像南山永长寿，永不亏损不坍崩。您像松柏永繁茂，福寿都由您继承。
-采薇
+> 您像上弦月光明，您像太阳正东升。您像南山永长寿，永不亏损不坍崩。您像松柏永繁茂，福寿都由您继承。
+### 采薇
 昔我往矣，杨柳依依①。今我来思，雨雪霏霏②。行道迟迟，载渴载饥。我心伤悲，莫知我哀！
 ①依依：形容柳枝茂盛而随风飘动的样子。
 ②霏霏（fēi）：雪花纷飞飘落的样子。
-【译文】
-昔日从军上战场，杨柳依依好春光。今日归来路途上，大雪纷纷满天扬。道路泥泞走得慢，又渴又饥苦难当。我心伤感悲满腔，谁人知我痛断肠！
-出车
+> 昔日从军上战场，杨柳依依好春光。今日归来路途上，大雪纷纷满天扬。道路泥泞走得慢，又渴又饥苦难当。我心伤感悲满腔，谁人知我痛断肠！
+### 出车
 王事多难，维其棘矣①。
 ①维：发语词。棘：通“亟”，紧急。
-【译文】
-国家危难的时刻，事情紧急莫等待。
+> 国家危难的时刻，事情紧急莫等待。
 王事多难，不遑启居。岂不 归？畏此简书①。
 ①简书：写在竹简上的文书。此指周王的命令。
-【译文】
-国家多灾又多难，日日忙碌不得安。难道不想回家转？只因军令难违反。
+> 国家多灾又多难，日日忙碌不得安。难道不想回家转？只因军令难违反。
 春日迟迟①，卉木萋萋②。仓庚喈喈③，采蘩祁祁④。
 ①迟迟：日长的样子。
 ②卉（huì）：草。萋萋：茂盛的样子。
 ③仓庚：黄莺。喈喈：鸟鸣声。
 ④祁祁：众多的样子。
-【译文】
-春天到来白日长，草木茂盛色苍苍。黄莺喳喳枝头唱，采蘩姑娘采摘忙。
-南山有臺
+> 春天到来白日长，草木茂盛色苍苍。黄莺喳喳枝头唱，采蘩姑娘采摘忙。
+### 南山有臺
 南山有桑，北山有杨。乐只君子，邦家之光①。乐只君子，万寿无疆！
 ①光：荣耀。
-【译文】
-南山头上桑树长，北山坡上杨树壮。那些快乐的君子，就是国家的荣光。那些快乐的君子，祝福万寿永无疆！
+> 南山头上桑树长，北山坡上杨树壮。那些快乐的君子，就是国家的荣光。那些快乐的君子，祝福万寿永无疆！
 乐只君子，民之父母①。
 ①民之父母：意指其爱民如子，则民尊之如父母。
-【译文】
-那些快乐的君子，民众尊敬如父母。
+> 那些快乐的君子，民众尊敬如父母。
 湛露
 湛湛露斯①，匪阳不晞②。厌厌夜饮③，不醉无归。
 ①湛湛：露水浓重的样子。斯：语气词。
 ②晞（xī）：干。
 ③厌厌：安乐貌。夜饮：即晚宴。
-【译文】
-早晨露珠重又浓，太阳不出不蒸发。如此盛大的晚宴，不喝一醉不回家。
+> 早晨露珠重又浓，太阳不出不蒸发。如此盛大的晚宴，不喝一醉不回家。
 车攻
 萧萧马鸣①，悠悠旆旌②。
 ①萧萧：马鸣声。
 ②悠悠：旗帜飘动貌。
-【译文】
-战马嘶鸣声萧萧，竿竿旌旗悠悠飘。
+> 战马嘶鸣声萧萧，竿竿旌旗悠悠飘。
 鸿雁
 鸿雁于飞①，肃肃其羽②。之子于征③，劬劳于野④。爰及矜人⑤，哀此鳏寡⑥。
 ①鸿雁：大雁。于：语助词。
@@ -656,72 +559,60 @@ date: 2022-12-27 11:44:01
 沔彼流水①，朝宗于海②。
 ①沔（miǎn）：水流涨满貌。
 ②朝宗于海：诸侯朝见天子。春见曰“朝”，夏见曰“宗”，这里借指河水流向大海。
-【译文】
-条条河流水弥漫，东流归海成汪洋。
-鹤鸣
+> 条条河流水弥漫，东流归海成汪洋。
+### 鹤鸣
 鹤鸣于九皋，声闻于天。
-【译文】
-九曲沼泽白鹤叫，声音响亮达云霄。
+> 九曲沼泽白鹤叫，声音响亮达云霄。
 他山之石，可以攻玉①。
 ①攻：加工，雕刻。
-【译文】
-他乡山上有宝石，同样可把玉石雕。
-斯干
+> 他乡山上有宝石，同样可把玉石雕。
+### 斯干
 秩秩斯干①，幽幽南山②。如竹苞矣③，如松茂矣。
 ①秩秩：水清而流动的样子。斯：此。干：通“涧”。
 ②幽幽：深远貌。南山：即陕西境内的终南山。 ③如：有。苞：植物丛生的样子，与下“茂”字意同，皆言草木茂盛。
-【译文】
-流水清清的溪涧，幽幽静静的南山。苍翠的绿竹片片，茂盛的青松连绵。
+> 流水清清的溪涧，幽幽静静的南山。苍翠的绿竹片片，茂盛的青松连绵。
 兄及弟矣，式相好矣①，无相犹矣②。
 ①式：发语词，无实义。
 ②犹：欺诈。《广雅》：“犹，欺也。”
-【译文】
-同宗同祖的兄弟，相互友爱心相连，绝不算计和欺骗。
-节南山
+> 同宗同祖的兄弟，相互友爱心相连，绝不算计和欺骗。
+### 节南山
 弗躬弗亲①，庶民弗信。弗问弗仕②，勿罔君子③。
 ①弗：不。躬：亲自。
 ②问：体恤，安抚。仕：事。此指不任用人办事。
 ③罔：欺罔。
-【译文】
-从不亲身理朝政，民众对你不信任。不举贤才不任用，欺上罔下怎能行。
+> 从不亲身理朝政，民众对你不信任。不举贤才不任用，欺上罔下怎能行。
 不自为政，卒劳百姓①。
 ①卒：“瘁”的借字，劳苦。
-【译文】
-君王如不亲临政， 终苦了老百姓。十月之交
+> 君王如不亲临政， 终苦了老百姓。十月之交
 百川沸腾，山冢崒崩①。高岸为谷②，深谷为陵。哀今之人，胡憯莫惩③。
 ①山冢崒崩：言地震之突发，令高山忽崩。冢，山顶。崒，
 “碎”的假借字，碎崩。
 ②岸：山崖。《国语·周语》云：“幽王二年，西周三川皆震。是岁也，三川竭，岐山崩。”与《诗经》所言相符。
 ③胡憯（cǎn）莫惩：为何不知警戒。胡憯，怎么。莫惩，不止。
-【译文】
-百千河川顿沸腾，崇山峻岭突塌崩。高高崖岸变深谷，深深山谷变山陵。可怜现今天下人，面对凶险不自警！
+> 百千河川顿沸腾，崇山峻岭突塌崩。高高崖岸变深谷，深深山谷变山陵。可怜现今天下人，面对凶险不自警！
 下民之孽①，匪降自天。噂沓背憎②，职竞由人③。
 ①孽：灾殃，祸患。
 ②噂（zǔn）沓背憎：王逸注：“诗言小人之情，聚则相合，背则相憎。”噂，聚语也。沓，合也。
 ③职竞由人：言纷争非降自天，而是由人造成的。职竞，毛传：
 “职，主也。”竞，争夺。
-【译文】
-下民百姓遭大难，灾祸不是降自天。当面言欢背后骂，坏人专横没法办。
-雨无正
+> 下民百姓遭大难，灾祸不是降自天。当面言欢背后骂，坏人专横没法办。
+### 雨无正
 凡百君子，各敬尔身①。胡不相畏②，不畏于天？
 ①敬：戒慎。
 ②畏：敬畏。
-【译文】
-朝中群臣众君子，小心谨慎应自重。为何不存敬畏心，难道不知畏天命？
-小旻
+> 朝中群臣众君子，小心谨慎应自重。为何不存敬畏心，难道不知畏天命？
+### 小旻
 民虽靡 ①，或哲或谋，或肃或艾②。如彼泉流，无沦胥以败③。
 ①靡 （hū）：没有法则。
 ②肃：恭敬。艾：同“乂”（yì），治理。
 ③无：语助词。沦胥：相率。
-【译文】
-民众虽然没定则，哲人谋士在其中，还有干才和能人。弃才如同泉水流，国家衰败无止休。
+> 民众虽然没定则，哲人谋士在其中，还有干才和能人。弃才如同泉水流，国家衰败无止休。
 不敢暴虎①，不敢冯河②。人知其一，莫知其他。战战兢兢
 ③，如临深渊，如履薄冰。
 ①暴虎：徒手打虎。
 ②冯（píng）河：徒步渡河。
 ③战战：恐惧的样子。兢兢：小心谨慎的样子。
-【译文】
-不敢空手打老虎，不敢徒步把河渡。人们只知这道理，其他事情就糊涂。战战兢兢为国忧，如临深渊快回头，如踏薄冰把脚收。小宛
+> 不敢空手打老虎，不敢徒步把河渡。人们只知这道理，其他事情就糊涂。战战兢兢为国忧，如临深渊快回头，如踏薄冰把脚收。小宛
 我日斯迈①，而月斯征②。夙兴夜寐，毋忝尔所生③。
 ①斯：语助词。迈：行，指远行，行役。
 ②而：你，指兄弟。
@@ -731,9 +622,8 @@ date: 2022-12-27 11:44:01
 ①温温：和柔貌。恭人：恭谨守礼的人。
 ②如集于木：如鸟之集于树木，惧怕坠落。
 ③惴惴：恐惧戒慎貌。
-【译文】
-温厚谦恭守礼人，就像站在高树上。惴惴不安向下望，如同身临深谷旁。战战兢兢小心行，如踏薄冰恐沦丧。
-小弁
+> 温厚谦恭守礼人，就像站在高树上。惴惴不安向下望，如同身临深谷旁。战战兢兢小心行，如踏薄冰恐沦丧。
+### 小弁
 踧踧周道①，鞫为茂草②。我心忧伤，惄焉如捣③。假寐永叹④，维忧用老⑤。心之忧矣，疢如疾首⑥。
 ①踧踧（dí）：平坦貌。《说文》：“踧踧，行平易也。”周道：大道。
 ②鞫（jú）：阻塞，充塞。
@@ -741,43 +631,35 @@ date: 2022-12-27 11:44:01
 ④假寐：和衣而眠。永叹：长叹。
 ⑤维：发语词。用：以。
 ⑥疢（chèn）：本指热病，此处泛指烦恼忧愁。疾首：即“首疾”，头痛病。因心中烦乱而头痛。
-【译文】
-本是平坦的大道，如今长满繁茂草。忧伤满心难排遣，痛苦不堪如杵捣。和衣躺下唯长叹，忧伤使人渐衰老。心里忧愁无处诉，头痛使人难忍受。
+> 本是平坦的大道，如今长满繁茂草。忧伤满心难排遣，痛苦不堪如杵捣。和衣躺下唯长叹，忧伤使人渐衰老。心里忧愁无处诉，头痛使人难忍受。
 莫高匪山，莫浚匪泉①。君子无易由言②，耳属于垣③。
 ①莫高匪山，莫浚匪泉：是说山高泉深，莫能穷测，以喻人心之险犹如山川。莫，不。浚，深。匪，非。
 ②易：轻易。由：于。
 ③属（zhǔ）：附着。垣：墙。即隔墙有耳之意。
-【译文】
-高大险峻才是山，水深清冽才是泉。君子休要轻易言，墙外有人附耳探。
-巧言
+> 高大险峻才是山，水深清冽才是泉。君子休要轻易言，墙外有人附耳探。
+### 巧言
 君子信盗①，乱是用暴②。
 ①盗：指谗人。
 ②暴：厉害，严重。
-【译文】
-君王轻信窃国盗，祸乱因此更凶暴。
+> 君王轻信窃国盗，祸乱因此更凶暴。
 他人有心，予忖度之。
-【译文】
-别人内心怎么想，我是能够猜中的。
+> 别人内心怎么想，我是能够猜中的。
 往来行言①，心焉数之②。
 ①行言：道听途说的话。
 ②数：辨别。
-【译文】
-道听途说的流言，内心是能辨别的。
+> 道听途说的流言，内心是能辨别的。
 巧言如簧，颜之厚矣。
-【译文】
-花言巧语声如簧，脸皮太厚没人样。
-巷伯
+> 花言巧语声如簧，脸皮太厚没人样。
+### 巷伯
 慎尔言也，谓尔不信①。
 ①信：信实。
-【译文】
-劝你说话要当心，否则没人再相信。
-蓼莪
+> 劝你说话要当心，否则没人再相信。
+### 蓼莪
 蓼蓼者莪①，匪莪伊蒿②。哀哀父母，生我劬劳③。
 ①蓼蓼（lù）：植物长大的样子。莪（é）：植物名，俗称“抱娘蒿”。
 ②匪莪伊蒿：孔疏：“言蓼蓼然长大者，正是莪也，而不精审视之，以为非莪，反谓之维蒿。……以己二亲，今且病亡，身在役中，不得侍养，精神昏乱，故视物不察也。”匪，同“非”。伊，是。
 ③劬（qú）劳：劳累，劳苦。
-【译文】
-丛丛高大抱娘蒿，不是莪蒿是艾蒿。可怜我的父和母，生我养我多辛劳。
+> 丛丛高大抱娘蒿，不是莪蒿是艾蒿。可怜我的父和母，生我养我多辛劳。
 父兮生我，母兮鞠我①。拊我畜我②，长我育我。顾我复我
 ③，出入腹我④。欲报之德，昊天罔极⑤！
 ①鞠（jū）：养育。
@@ -785,9 +667,8 @@ date: 2022-12-27 11:44:01
 ③顾：指在家时照顾。复：指出门时不舍离去。
 ④腹： 抱。
 ⑤罔：无。极：穷。
-【译文】
-父亲父亲生了我，母亲母亲哺育我。抚育我啊爱护我，养我长大教育我。照顾我啊挂念我，出出入入抱着我。想要报答父母恩，恩情如天报不得。
-大东
+> 父亲父亲生了我，母亲母亲哺育我。抚育我啊爱护我，养我长大教育我。照顾我啊挂念我，出出入入抱着我。想要报答父母恩，恩情如天报不得。
+### 大东
 维南有箕①，不可以簸扬。维北有斗②，不可以挹酒浆③。
 维南有箕，载翕其舌④。维北有斗，西柄之揭⑤。
 ①箕：箕星由四星组成，形如簸箕。
@@ -795,50 +676,40 @@ date: 2022-12-27 11:44:01
 ③挹（yì）：舀取。
 ④载翕（xī）其舌：此句比喻西人像张口收舌一般要吃掉东人的东西。翕，吸，引。箕四星，二踵二舌，踵狭而舌广，形似簸箕前宽后窄，似向内吸引其舌。
 ⑤西柄之揭：朱熹《诗集传》：“言南箕既不可以簸扬糠秕，北斗既不可以挹酌酒浆，而箕引其舌，反若有所吞噬，斗西揭其柄，反若有所挹取于东。”王先谦《诗三家义集疏》：“下四句与上四句虽同言箕斗，自分两义。上刺虚位，下刺敛民也。”这句比喻西人高举斗柄在舀东人的酒浆。揭，举。
-【译文】
-南方箕星簸箕样，不能用来簸米糠。北方夜空有斗星，不能当勺舀酒浆。南方箕星闪闪亮，好似舌头宽又长。北方夜空有斗星，朝西斗柄高高扬。
-四月
+> 南方箕星簸箕样，不能用来簸米糠。北方夜空有斗星，不能当勺舀酒浆。南方箕星闪闪亮，好似舌头宽又长。北方夜空有斗星，朝西斗柄高高扬。
+### 四月
 匪鹑匪鸢①，翰飞戾天②；匪鳣匪鲔③，潜逃于渊。
 ①匪：彼。鹑（tuán）：雕。鸢（yuān）：老鹰。 ②翰：高。戾：至。
 ③鳣（zhān）：鲤鱼。鲔（wěi）：鲟鱼。
-【译文】
-为人不如雕和鹰，高高飞翔在天空；看那鲤鱼和鲟鱼，潜逃进入深水中。
+> 为人不如雕和鹰，高高飞翔在天空；看那鲤鱼和鲟鱼，潜逃进入深水中。
 君子作歌①，维以告哀②。
 ①君子：作者自称。
 ②维：是。以：用。告哀：诉说自己的悲哀。
-【译文】
-君子创作这首歌，是为诉说心中悲。
-北山
+> 君子创作这首歌，是为诉说心中悲。
+### 北山
 溥天之下，莫非王土；率土之滨，莫非王臣。
-【译文】
-普天之下的领土，哪块不是王的土？四海之内的民众，何人不是王臣仆？
+> 普天之下的领土，哪块不是王的土？四海之内的民众，何人不是王臣仆？
 旅力方刚①，经营四方。
 ①旅：通“膂”，膂力，体力。
-【译文】
-浑身是劲力气大，理应当差奔四方。
-小明
+> 浑身是劲力气大，理应当差奔四方。
+### 小明
 念彼共人①，涕零如雨。岂不 归？畏此罪罟②！
 ①共人：共同生活之人。这里指妻子和家人。 ②罪罟（gǔ）：罗网。罪，捕鱼竹网。罟，网也。此处喻指法网。
-【译文】
-想到家人和妻子，泪如雨下满面涌。难道我不想回家？畏惧法网太无情！
+> 想到家人和妻子，泪如雨下满面涌。难道我不想回家？畏惧法网太无情！
 嗟尔君子，无恒安处！靖共尔位，正直是与①。
 ①与：接近。
-【译文】
-我劝你们众君子，休处安闲把福享！而要忠于你职守，要与正人相为伍。
+> 我劝你们众君子，休处安闲把福享！而要忠于你职守，要与正人相为伍。
 嗟尔君子，无恒安息！靖共尔位，好是正直。
-【译文】
-我劝你们众君子，休贪安逸把福享！忠于职守办好事，亲近正直和贤良。
-鼓钟
+> 我劝你们众君子，休贪安逸把福享！忠于职守办好事，亲近正直和贤良。
+### 鼓钟
 淑人君子①， 允不忘②。
 ①淑人君子：美德之人。淑，善。
 ② ： 念。允：语助词。
-【译文】
-遥想善良的君子，深厚 念永难忘。
-甫田
+> 遥想善良的君子，深厚 念永难忘。
+### 甫田
 乃求千斯仓，乃求万斯箱。黍稷稻粱，农夫之庆。报以介福，万寿无疆！
-【译文】
-还需上千的粮仓，还需上万的粮厢。黍稷稻粱均丰登，实赖农夫的福祥。神灵赐予大幸福，将享万寿永无疆！
-大田
+> 还需上千的粮仓，还需上万的粮厢。黍稷稻粱均丰登，实赖农夫的福祥。神灵赐予大幸福，将享万寿永无疆！
+### 大田
 彼有不获稚①，此有不敛 ②。彼有遗秉③，此有滞穗④，伊寡妇之利⑤。
 ①不获稚：没收割的未熟之禾。
 ②不敛 （jì）：未收起的成把的遗禾。 ，聚禾成把谓之“
@@ -846,229 +717,190 @@ date: 2022-12-27 11:44:01
 ③遗秉：漏掉的禾束。
 ④滞穗：丢落地里的禾穗。
 ⑤利：好处。此指寡妇享利。
-【译文】
-有些青禾没收割，有些庄稼没敛完。那里有把丢弃禾，这里有个散落穗，孤苦寡妇来拾拣。
+> 有些青禾没收割，有些庄稼没敛完。那里有把丢弃禾，这里有个散落穗，孤苦寡妇来拾拣。
  弁
 乐酒今夕，君子维宴。
-【译文】
-今晚大家要畅饮，君子宴乐要尽兴。
-车舝
+> 今晚大家要畅饮，君子宴乐要尽兴。
+### 车舝
 高山仰止①，景行行止②。
 ①仰止：仰望。止，之。
 ②景行：大道。
-【译文】
-高山崔嵬我仰望，大道平坦任我行。
-青蝇
+> 高山崔嵬我仰望，大道平坦任我行。
+### 青蝇
 岂弟君子①，无信谗言。
 ①岂弟（kǎi tì）：平易近人。
-【译文】
-平和快乐的君子，不要把那谗言听。
+> 平和快乐的君子，不要把那谗言听。
 营营青蝇，止于棘①。谗人罔极②，交乱四国③。
 ①棘：酸枣树。指篱笆，古代多用带刺灌木编为篱笆墙。
 ②罔极：指行为不轨，有“无行”之意。一说无止。
 ③交乱：交错纷乱。四国：四方之国。
-【译文】
-苍蝇乱飞声嗡嗡，飞上酸枣枝上停。谗人无德又无行，扰乱四方不太平。
-宾之初筵
+> 苍蝇乱飞声嗡嗡，飞上酸枣枝上停。谗人无德又无行，扰乱四方不太平。
+### 宾之初筵
 醉而不出，是谓伐德①。饮酒孔嘉②，维其令仪③。
 ①伐德：害德，败德。
 ②孔嘉：甚美。
 ③令：善。仪：礼节。朱熹《诗集传》：“饮酒之所以甚美者，以其有令仪耳。”
-【译文】
-喝醉还要继续饮，这种行为败德行。饮酒本是好事情，应当保有好品行。
+> 喝醉还要继续饮，这种行为败德行。饮酒本是好事情，应当保有好品行。
 匪言勿言，匪由勿语①。
 ①匪由勿语：不合理的不要说。由，式，法。
-【译文】
-不当讲的不要讲，无理之言把口停。
-采菽
+> 不当讲的不要讲，无理之言把口停。
+### 采菽
 乐只君子，万福攸同①。
 ①攸：所。同：聚。
-【译文】
-各位诸侯真快乐，万福集中你身上。
-角弓
+> 各位诸侯真快乐，万福集中你身上。
+### 角弓
 骍骍角弓①，翩其反矣②。兄弟昏姻③，无胥远矣④。
 ①骍骍（xīn）：弓调和貌。角弓：两端用兽角装饰的弓。
 ②翩其：即“翩翩”，偏颇。指放松弓弦，则弓身向外伸展。比喻兄弟婚姻不可疏远。
 ③兄弟：指同姓亲属。昏姻：即“婚姻”，指姻亲。
 ④胥：相。远：疏远。
-【译文】
-调好角弓绷紧弦，松弦就向反面弯。兄弟姻亲的关系，互相亲爱不疏远。
+> 调好角弓绷紧弦，松弦就向反面弯。兄弟姻亲的关系，互相亲爱不疏远。
 尔之教矣①，民胥效矣②。
 ①教：教导。
 ②效：仿效，效法。
-【译文】
-你能言教加身教，民众互相来仿效。
+> 你能言教加身教，民众互相来仿效。
 此令兄弟①，绰绰有裕②。不令兄弟③，交相为瘉④。
 ①令：善，美。
 ②绰绰：宽裕貌。
 ③不令：不善，指不相友善的兄弟。
 ④瘉（yù）：病。此指相互嫉恨。
-【译文】
-兄弟和睦是美德，大家和气快乐多。兄弟缺少这美德，相互 恨害处多。
+> 兄弟和睦是美德，大家和气快乐多。兄弟缺少这美德，相互 恨害处多。
 民之无良①，相怨一方。受爵不让，至于己斯亡②。
 ①良：善。
 ②亡：通“忘”。
-【译文】
-民众心地如不善，就会相互成积怨。受爵受封不相让，事关己私道理忘。
+> 民众心地如不善，就会相互成积怨。受爵受封不相让，事关己私道理忘。
 如食宜 ①，如酌孔取②。
 ① （yù）：饱。
 ②取：舀取。
-【译文】
-如像吃饭只宜饱，又像喝酒不贪欢。
+> 如像吃饭只宜饱，又像喝酒不贪欢。
 毋教猱升木①，如涂涂附②。君子有徽猷③，小人与属④。
 ①毋：不要。猱：猿猴类动物。升木：攀树。
 ②涂：泥浆。附：附着。毛传：“涂，泥。附，着也。” ③徽猷：善道。徽，善。猷，道。
 ④属：附，随。
-【译文】
-猿猴爬树不用教，如泥涂墙容易牢。君子善政去引导，小民自然跟着跑。
-菀柳
+> 猿猴爬树不用教，如泥涂墙容易牢。君子善政去引导，小民自然跟着跑。
+### 菀柳
 有鸟高飞，亦傅于天①。
 ①傅：至，到。
-【译文】
-鸟儿即便飞得高， 高不过到天上。
-隰桑
+> 鸟儿即便飞得高， 高不过到天上。
+### 隰桑
 心乎爱矣，遐不谓矣①？中心藏之②，何日忘之！
 ①遐不：何不。谓：说。
 ②中心：心中。
-【译文】
-爱你爱在内心窝，何不明白对你说？思念之情藏心中，哪有一日忘记过！
-何草不黄
+> 爱你爱在内心窝，何不明白对你说？思念之情藏心中，哪有一日忘记过！
+### 何草不黄
 何草不黄？何日不行？何人不将①，经营四方？
 ①将：行，出征。
-【译文】
-什么草儿不枯黄？什么日子不奔忙？什么人儿不出征，东西南北奔四方？
+> 什么草儿不枯黄？什么日子不奔忙？什么人儿不出征，东西南北奔四方？
 匪兕匪虎①，率彼旷野②。哀我征夫，朝夕不暇。
 ①兕（sì）：野牛。
 ②率：循，沿着。
-【译文】
-既非野牛又非虎，常在旷野里奔走。可怜我们出征人，早晚忙碌不停休。
-大雅
-文王
+> 既非野牛又非虎，常在旷野里奔走。可怜我们出征人，早晚忙碌不停休。
+## 大雅
+### 文王
 周虽旧邦①，其命维新②。
 ①旧邦：旧国。周由文王的祖父古公亶父建国，所以称“旧邦”。
 ②命：指天命。维：是。
-【译文】
-周朝虽然是旧邦，国运出现新气象。
+> 周朝虽然是旧邦，国运出现新气象。
 思皇多士①，生此王国。王国克生②，维周之桢③。济济多士④，文王以宁。
 ①思：发语词。皇：美好。
 ②克：能。
 ③维：是。桢：支柱，骨干。
 ④济济：多而整齐的样子。
-【译文】
-英才贤士真正多，有幸出生在周邦。周邦能出众贤士，都是国家的栋梁。人才济济聚一堂，文王以此来安邦。
+> 英才贤士真正多，有幸出生在周邦。周邦能出众贤士，都是国家的栋梁。人才济济聚一堂，文王以此来安邦。
 无念尔祖，聿修厥德①。永言配命②，自求多福。
 ①聿（yù）：唯。
 ②配命：合乎天命。
-【译文】
-牢记祖德不能忘，继承其德又发扬。顺应天命不违背，自求多福多吉祥。
-大明
+> 牢记祖德不能忘，继承其德又发扬。顺应天命不违背，自求多福多吉祥。
+### 大明
 天难忱斯①，不易维王②。
 ①忱（chén）：相信。
 ②易：轻率怠慢。
-【译文】
-天命不变难相信，君王不能轻易当。
-棫朴
+> 天命不变难相信，君王不能轻易当。
+### 棫朴
 倬彼云汉①，为章于天②。周王寿考③，遐不作人④？
 ①倬（zhuō）彼：即“倬倬”，大而明貌。云汉：天河。
 ②章：文章，文采。此指天河星光灿烂。
 ③寿考：长寿，高寿。
 ④遐：长远。不：语助词。作人：造就人材。
-【译文】
-看那明亮的天河，夜空美丽又莹彻。周王健康且长寿，造就人材多又多。
+> 看那明亮的天河，夜空美丽又莹彻。周王健康且长寿，造就人材多又多。
 追琢其章①，金玉其相②。勉勉我王③，纲纪四方。
 ①追琢：雕琢。追，“雕”之借字。章：外表，气度。 ②相：品质，指内质。此言其本质如金玉之美。
 ③勉勉：勤勉不已貌。
-【译文】
-精心雕琢勤修养，品质金玉一个样。勤奋不已我周王，领导天下保四方。
-旱麓
+> 精心雕琢勤修养，品质金玉一个样。勤奋不已我周王，领导天下保四方。
+### 旱麓
 鸢飞戾天，鱼跃于渊①。岂弟君子，遐不作人②。
 ①鸢（yuān）飞戾天，鱼跃于渊：两句是说上下自然，各得其所也。鸢，即鹞鹰。戾天，至天。指飞至天上。渊，深潭。
 ②遐：长远。不：语助词。作人：造就人才。
-【译文】
-苍鹰展翅飞上天，鱼儿跳跃在深渊。平易和乐的周王，造就人才有远见。
+> 苍鹰展翅飞上天，鱼儿跳跃在深渊。平易和乐的周王，造就人才有远见。
 思齐
 刑于寡妻①，至于兄弟，以御于家邦②。
 ①刑：通“型”，典范。寡妻：嫡妻。
 ②御：治理。
-【译文】
-文王以礼待嫡妻，友爱各位好兄弟，以身作则家邦理。
+> 文王以礼待嫡妻，友爱各位好兄弟，以身作则家邦理。
 不闻亦式，不谏亦入①。
 ①不闻亦式，不谏亦入：王引之《经传释词》曰： “两‘不’字，两‘亦’字皆语词。式，用也。入，纳也。言闻善言则用之，进谏则纳之。”不、亦，皆语助词。闻，听。式，用。入，纳。
-【译文】
-听到善言就采纳，有人劝谏倾心听。
-皇矣
+> 听到善言就采纳，有人劝谏倾心听。
+### 皇矣
 不识不知①，顺帝之则②。
 ①不识不知：指不知不觉，自然而然。陈奂《诗毛氏传疏》：
 “言文王性与天合。”
 ②顺：顺从，遵循。则：法则。
-【译文】
-如同不知又不觉，遵循天意是法则。
-下武
+> 如同不知又不觉，遵循天意是法则。
+### 下武
 永言孝思①，孝思维则②。
 ①孝：孝心，孝道。思：语助词。
 ②则：法则。或效法。言周王之孝为臣民的典型。或以为“则” 是指“则其先人”。毛传：“则其先人也。”
-【译文】
-永 恭敬尽孝道，孝行即是法先王。
+> 永 恭敬尽孝道，孝行即是法先王。
 昭兹来许①，绳其祖武②。於万斯年③，受天之祜④。
 ①来许：后进。许，通“御”，进。
 ②绳：继承、遵循之意。祖武：祖先的足迹，指事业。武，迹。
 ③於：美叹声。万斯年：犹“万其年”，有“使其万年”的意思。
 ④祜（hù）：福。
-【译文】
-昭告子孙要牢记，遵循祖先的足迹。啊，周的基业万年长，受天赐福永无量。
-文王有声
+> 昭告子孙要牢记，遵循祖先的足迹。啊，周的基业万年长，受天赐福永无量。
+### 文王有声
 诒厥孙谋①，以燕翼子②。
 ①诒：贻，遗留。厥孙：即“其孙”，指子孙。言遗其子孙以善谋。
 ②以燕翼子：此句是以燕覆翼其子，喻武王之遗谋后嗣。朱熹《诗集传》：“言丰水之旁生物繁茂，武王岂不欲有事于此哉？但以欲遗孙谋以安翼子，故不得而不迁耳。”
-【译文】
-留下安民好谋略，保护子孙把国享。
-行苇
+> 留下安民好谋略，保护子孙把国享。
+### 行苇
 戚戚兄弟①，莫远具尔②。
 ①戚戚：亲热貌。
 ②莫远具尔：指关系不疏远，都是亲近之人。莫，不要。远，疏远。具，通“俱”，都。尔，“迩”的古字，亲近。一说此言不要疏远，都应亲近些。
-【译文】
-亲亲热热众兄弟，莫要疏远聚一堂。
-既醉
+> 亲亲热热众兄弟，莫要疏远聚一堂。
+### 既醉
 孝子不匮①，永锡尔类②。
 ①匮：“坠”之借，“不坠”为周人常用语，此指奋勉不废坠。
 ②锡：即“赐”。类：族类，此指其德能广及其族类。
-【译文】
-孝子孝心永不竭，赐你子孙永昌盛。
-假乐
+> 孝子孝心永不竭，赐你子孙永昌盛。
+### 假乐
 假乐君子①，显显令德②。宜民宜人③，受禄于天。
 ①假：通“嘉”，嘉美，赞美。乐：喜爱。君子：指周王。
 ③显显：光明貌。令德：美德。
 ③宜：适合。民：庶民。人：指群臣。
-【译文】
-美好和乐的君子，美德赫赫真显明。符合臣民的心意，承受福泽天赐定。
+> 美好和乐的君子，美德赫赫真显明。符合臣民的心意，承受福泽天赐定。
 穆穆皇皇①，宜君宜王。不愆不忘②，率由旧章。
 ①穆穆：肃敬貌。皇皇：光明貌。
 ②愆：过失。忘：糊涂。
-【译文】
-庄重威严又堂皇，宜作国君或作王。不犯过错不忘祖，严格遵循旧典章。
+> 庄重威严又堂皇，宜作国君或作王。不犯过错不忘祖，严格遵循旧典章。
 威仪抑抑①，德音秩秩②。无怨无恶，率由群匹③。
 ①威仪：仪容举止。抑抑：通“懿懿”，庄重盛美貌。
 ②德音：旧以为美誉或教令。当指言谈之美。秩秩：有条不紊。
 ③群匹：群臣。匹，类。
-【译文】
-仪容举止多庄重，言谈教令条理清。没有抱怨没厌烦，群臣建议就欢迎。
-卷阿
+> 仪容举止多庄重，言谈教令条理清。没有抱怨没厌烦，群臣建议就欢迎。
+### 卷阿
 有冯有翼①，有孝有德②，以引以翼③。
 ①冯（píng）：依凭。翼：辅佐。
 ②有孝有德：有孝敬者，有修德者。或以为孝、德皆指美德。 ③引：引导。翼：辅助。郑笺：“在前曰引，在旁曰翼。”
-【译文】
-贤才良士为依凭，还有孝子与贤德，共同引导和辅佐。
+> 贤才良士为依凭，还有孝子与贤德，共同引导和辅佐。
 颙颙卬卬①，如圭如璋②，令闻令望③。岂弟君子，四方为纲④。
 ①颙颙（yóng）：恭敬温顺貌。卬卬：气宇轩昂貌。卬，通
 “昂”。
 ②圭、璋：古代礼器，美玉制成。
 ③令：善，好。
 ④纲：纲纪，法度。
-【译文】
-恭谨温厚气轩昂，品德纯洁如圭璋，美好声誉传四方。平易和乐的君王，四方诸侯好榜样。
+> 恭谨温厚气轩昂，品德纯洁如圭璋，美好声誉传四方。平易和乐的君王，四方诸侯好榜样。
 凤皇鸣矣，于彼高冈。梧桐生矣，于彼朝阳。
-【译文】
-凤凰叫声多嘹亮，在那高高山冈上。高大梧桐拔地长，面对朝阳的方向。
+> 凤凰叫声多嘹亮，在那高高山冈上。高大梧桐拔地长，面对朝阳的方向。
 民劳
 民亦劳止①，汔可小康②。惠此中国③，以绥四方④。
 ①劳：劳苦。止：语助词。
@@ -1080,35 +912,30 @@ date: 2022-12-27 11:44:01
 敬慎威仪①，以近有德②。
 ①威仪：仪容举止。
 ②近：靠近。有德：有道德的人。
-【译文】
-谨慎自己的举止，亲近高尚的君子。
-板
+> 谨慎自己的举止，亲近高尚的君子。
+### 板
 出话不然①，为犹不远②。靡圣管管③，不实于亶④。
 ①不然：不对，不是。或以为说话不算数。
 ②犹：谋。
 ③靡圣：心中没有圣人的法度。管管：无所依凭，自以为是貌。
 ④不实：不落实。亶：诚信。
-【译文】
-讲过的话不算数，制定政策没眼光。不法圣人自主张，不讲诚信真荒唐。
+> 讲过的话不算数，制定政策没眼光。不法圣人自主张，不讲诚信真荒唐。
 辞之辑矣①，民之洽矣②。辞之怿矣③，民之莫矣④。
 ①辞：指政令之辞。辑：和谐。
 ②洽：融和团结。
 ③怿：和悦。
 ④莫：定。
-【译文】
-如果政令合民意，百姓和睦乐融融。如果政令民高兴，百姓生活就安定。
+> 如果政令合民意，百姓和睦乐融融。如果政令民高兴，百姓生活就安定。
 我言维服①，勿以为笑②。先民有言③：询于刍荛④。
 ①服：治。指合理的意见。
 ②笑：嘲笑，嬉笑。
 ③先民：古人。
 ④刍荛（ráo）：此指割草与打柴的人。
-【译文】
-我说都是治国事，莫要当作笑话讲。古人有话讲得好：樵夫也有好主张。
+> 我说都是治国事，莫要当作笑话讲。古人有话讲得好：樵夫也有好主张。
 多将熇熇①，不可救药②。
 ①多：适，只。将：扶持，这里当“助长”讲。熇熇（hè）：炽盛貌，此处指行残害荼毒之事。
 ②救药：即治疗。药，通“疗”。
-【译文】
-坏事做得过了头，不可救药国将亡。
+> 坏事做得过了头，不可救药国将亡。
 天之牖民①，如埙如篪②，如璋如圭③，如取如携④。携无曰益⑤，牖民孔易。
 ①牖（yǒu）：开启。一说通“诱”，诱导。
 ②埙：古代陶制的椭圆形吹奏乐器，有三五不等音孔。篪
@@ -1116,116 +943,93 @@ date: 2022-12-27 11:44:01
 ③璋、圭：玉器。半圭为璋，合二璋则成圭。毛传：“如埙如篪，言相和也。如圭如璋，言相合也。”
 ④携：提。一说携亦“取”。
 ⑤曰：语助词。益：通“隘”，阻碍。
-【译文】
-上天开启向善心，如埙如篪相和应，又如两璋为一圭，如同取物带身上。提物没有丝毫障，因势利导很顺当。
-荡
+> 上天开启向善心，如埙如篪相和应，又如两璋为一圭，如同取物带身上。提物没有丝毫障，因势利导很顺当。
+### 荡
 天生烝民①，其命匪谌②。靡不有初，鲜克有终③。
 ①烝民：众人。
 ②匪谌（chén）：指命运无常不可信。谌，诚。一说信。
 ③鲜（xiǎn）：少。
-【译文】
-上天生下众百姓，命运多变难确定。其初都以善开始，很少能够有善终。
+> 上天生下众百姓，命运多变难确定。其初都以善开始，很少能够有善终。
 不明尔德①，时无背无侧②。尔德不明，以无陪无卿③。
 ①不明：无知人之明。
 ②时：是。《韩诗》作“以”，亦通。无背无侧：毛传：“背无臣，侧无人也。”
 ③无陪无卿：毛传：“无陪贰，无卿士也。”郑笺：“无臣无人，谓贤者不用。”
-【译文】
-善恶不分德行昏，你的身旁无贤人。不分好坏心不明，没有陪臣和公卿。
+> 善恶不分德行昏，你的身旁无贤人。不分好坏心不明，没有陪臣和公卿。
 人亦有言①：颠沛之揭②，枝叶未有害，本实先拨③。
 ①亦：语助词。
 ②颠沛：跌倒。揭：高举，指树木倒地后，根部翘起。
 ③拨：当从《鲁诗》作“败”，即毁坏。
-【译文】
-人们常说这样话：倒伏大树根离地，枝叶虽未受损伤，它的根基已拔光。
+> 人们常说这样话：倒伏大树根离地，枝叶虽未受损伤，它的根基已拔光。
 殷鉴不远①，在夏后之世②。
 ①鉴：镜子。
 ②夏后：夏王。夏代一般称国君为“后”，不称王。
-【译文】
-殷商教训并不远，夏桀下场在眼前。
-抑
+> 殷商教训并不远，夏桀下场在眼前。
+### 抑
 抑抑威仪①，维德之隅②。人亦有言：靡哲不愚③。
 ①抑抑：通“懿懿”，慎密貌。威仪：容止礼节。
 ②维德之隅：容止礼节，同道德相匹配，有诸内而形于外。维，乃，是。隅，当作“偶”，匹配。
 ③靡：无。哲：聪明人。一说此句即“大智若愚”之意。
-【译文】
-美好仪容礼谦恭，此人品德必端正。人们有句老俗话：“大智若愚”耳常听。
+> 美好仪容礼谦恭，此人品德必端正。人们有句老俗话：“大智若愚”耳常听。
 无竞维人①，四方其训之②。有觉德行③，四国顺之。
 ①无：发语词。竞：强。维：以，由于。人：指贤人。
 ②四方：指诸侯。训：顺，顺从。
 ③有觉：即“觉觉”。觉，为“梏”的假借，《礼记· 衣》引此诗正作“梏”，高大正直貌。
-【译文】
-国强全靠有贤人，四方诸侯才顺从。有了正直的德行，四方诸侯才服膺。
+> 国强全靠有贤人，四方诸侯才顺从。有了正直的德行，四方诸侯才服膺。
  谟定命①，远犹辰告②。
 ① （xū）：大。谟：谋略，计划。定：确定。命：号令。 ②远犹：远谋。辰告：指随时宣告。辰，时，随时。
-【译文】
-宏伟计划应确定，远大谋略时讲明。
+> 宏伟计划应确定，远大谋略时讲明。
 敬慎威仪，维民之则。
-【译文】
-举止行为要谨慎，百姓以此为典型。
+> 举止行为要谨慎，百姓以此为典型。
 肆皇天弗尚①，如彼泉流，无沦胥以亡②。
 ①肆：犹“故”。尚：佑助，保佑。
 ②无：发语词。沦胥：相率，相随。
-【译文】
-上天不肯再保佑，好像泉水空自流，相继沦亡没个头。
+> 上天不肯再保佑，好像泉水空自流，相继沦亡没个头。
 夙兴夜寐，洒扫庭内，维民之章①。
 ①维：为，做。章：法则。
-【译文】
-应当早起又晚睡，就像厅堂常扫除，为民表率你领头。
+> 应当早起又晚睡，就像厅堂常扫除，为民表率你领头。
 质尔人民①，谨尔侯度，用戒不虞。
 ①质：《齐诗》作“诰”，《鲁诗》《韩诗》作“告”。马瑞辰
 《毛诗传笺通释》曰：“诰当为诘字之讹。”诘，谨。
-【译文】
-谨慎对待你百姓，按照君侯法度行，警惕意外事故生。
+> 谨慎对待你百姓，按照君侯法度行，警惕意外事故生。
 慎尔出话，敬尔威仪①，无不柔嘉②。
 ①敬：敬重，重视。
 ②柔嘉：和善。
-【译文】
-讲话出口要慎重，言行举止要端正，处处和善美颜容。
+> 讲话出口要慎重，言行举止要端正，处处和善美颜容。
 白圭之玷①，尚可磨也；斯言之玷，不可为也！
 ①玷：玉上的污点。
-【译文】
-白玉如果有瑕疵，还可打磨去除净；要是讲话出毛病，想要挽救不可能。
+> 白玉如果有瑕疵，还可打磨去除净；要是讲话出毛病，想要挽救不可能。
 无易由言，无曰苟矣。莫扪朕舌，言不可逝矣。
-【译文】
-不可轻易发意见，说话不能太随便。虽说没人按你舌，话一说出难改变。
+> 不可轻易发意见，说话不能太随便。虽说没人按你舌，话一说出难改变。
 无言不雠①，无德不报。
 ①雠：通“酬”，应答。
-【译文】
-没有出言无反应，没有施德无善报。
+> 没有出言无反应，没有施德无善报。
 视尔友君子，辑柔尔颜①，不遐有愆②。
 ①辑柔：和柔，指和颜悦色。
 ②不遐：不至于。愆：过错。
-【译文】
-对待同僚与君长，面色温柔又和善，不会有错招人厌。
+> 对待同僚与君长，面色温柔又和善，不会有错招人厌。
 相在尔室①，尚不愧于屋漏②。无曰不显，莫予云觏③。
 ①相：视。一说譬如。
 ②尚：尚且，庶几。不愧于屋漏：即言不愧于神明。屋漏，屋子西北隅隐蔽之处。古代在屋之西北隅设小帐以供神主，称屋漏。
 ③云：语助词。觏（gòu）：看见。
-【译文】
-当你独处于暗室，无愧神明品行端。不要认为屋里暗，行为美丑没人见。
+> 当你独处于暗室，无愧神明品行端。不要认为屋里暗，行为美丑没人见。
 不僭不贼①，鲜不为则。
 ①僭：差错。贼：“贰”字之讹，也作“忒”或“慝”，意即差爽，过失。
-【译文】
-不犯错误不害人，很少不成好模范。
+> 不犯错误不害人，很少不成好模范。
 投我以桃，报之以李。
-【译文】
-你赠给我一颗桃，我会回报你甜李。
+> 你赠给我一颗桃，我会回报你甜李。
 民之靡盈①，谁夙知而莫成②？
 ①靡盈：不是一切都好。
 ②谁夙知而莫成：言谁早慧而反晚成。夙知，早慧。莫，即
 “暮”。
-【译文】
-人应谦虚不自满，谁能早慧器晚成？
-桑柔
+> 人应谦虚不自满，谁能早慧器晚成？
+### 桑柔
 谁能执热，逝不以濯①？
 ①逝不：何不。濯（zhuó）：当指沐浴冲凉。毛传：“濯，所以救热也。”
-【译文】
-谁能炎炎酷暑下，不去水下冲个凉？
+> 谁能炎炎酷暑下，不去水下冲个凉？
 好是稼穑①，力民代食②。稼穑维宝，代食维好。
 ①好：喜爱。稼穑：指农业劳动。
 ②力民：指尽人之力耕作。代食：代替做官食禄。
-【译文】
-应该重视农耕事，百姓劳作官有粮。农业生产是个宝，官家有粮国兴旺。
+> 应该重视农耕事，百姓劳作官有粮。农业生产是个宝，官家有粮国兴旺。
 维此惠君①，民人所瞻。秉心宣犹②，考慎其相③。维彼不顺④，自独俾臧⑤。自有肺肠⑥，俾民卒狂⑦。
 ①惠君：通情达理的君主。
 ②秉心：持心，存心。宣犹：光明之道。
@@ -1234,161 +1038,135 @@ date: 2022-12-27 11:44:01
 ⑤臧：善。
 ⑥自有肺肠：想法与众不同，别具一副心肝。实指坏心肠。
 ⑦卒狂：全都狂惑迷乱。
-【译文】
-只有贤惠的君王，人民对他才敬仰。心地光明善治国，认真选用良卿相。唯有无道的昏君，快活只知自己享。别有一副坏心肠，使民迷惑而疯狂。
+> 只有贤惠的君王，人民对他才敬仰。心地光明善治国，认真选用良卿相。唯有无道的昏君，快活只知自己享。别有一副坏心肠，使民迷惑而疯狂。
 人亦有言：进退维谷①。
 ①进退维谷：言进退两难。谷，“鞠”的假借，穷，困窘。
-【译文】
-人们常说这样话：进退两难真苦闷。
+> 人们常说这样话：进退两难真苦闷。
 民之罔极①，职凉善背②。
 ①罔极：无准则。此句说百姓不守正道，犯上作乱。
 ②职：指当政者，官吏。凉：薄，不讲信用。善背：互相欺违。
-【译文】
-民众行为没定准，只因官吏善骗人。
+> 民众行为没定准，只因官吏善骗人。
 民之回遹①，职竞用力②。
 ①回遹（yù）：邪僻。
 ②竞：逐，争。用力：任用暴力。郑笺：“言民之行维邪者，主由为政者逐用彊力相尚故也。”
-【译文】
-民众行为不端正，只因官府施暴政。
-烝民
+> 民众行为不端正，只因官府施暴政。
+### 烝民
 天生烝民①，有物有则。民之秉彝②，好是懿德。
 ①烝（zhēng）民：众民。
 ②秉彝：禀性，秉质。彝，恒常之性。
-【译文】
-上天生下众百姓，世间万物有准绳。人民禀赋这常理，自然喜爱好品行。
+> 上天生下众百姓，世间万物有准绳。人民禀赋这常理，自然喜爱好品行。
 令仪令色，小心翼翼。
-【译文】
-和颜悦色仪 美，办事细心真出色。
+> 和颜悦色仪 美，办事细心真出色。
 既明且哲，以保其身。夙夜匪解，以事一人①。
 ①事：侍奉。一人：指周王。
-【译文】
-知识渊博明事理，保全节操有美名。早起晚睡不懈怠，对王尽心善侍奉。
+> 知识渊博明事理，保全节操有美名。早起晚睡不懈怠，对王尽心善侍奉。
 人亦有言：柔则茹之①，刚则吐之②。
 ①茹：吃。
 ②刚：指坚硬之物。
-【译文】
-民间流传这样话：柿子要拣软的吃，咬不动的吐掉它。
+> 民间流传这样话：柿子要拣软的吃，咬不动的吐掉它。
 柔亦不茹，刚亦不吐。不侮矜寡①，不畏强御②。
 ①侮：欺侮。矜寡：即“鳏寡”，这里指弱者。矜，老而无妻。
 寡，老而无夫。
 ②强御：指强悍之人。
-【译文】
-软的东西他不吃，硬的东西也不怕。从不欺侮鳏寡人，也不畏惧那恶霸。
+> 软的东西他不吃，硬的东西也不怕。从不欺侮鳏寡人，也不畏惧那恶霸。
 人亦有言：德 如毛①，民鲜克举之。
 ① （yóu）：轻。
-【译文】
-世俗还有这样话：德如羽毛一样轻，人却很难举起它。
-江汉
+> 世俗还有这样话：德如羽毛一样轻，人却很难举起它。
+### 江汉
 明明天子①，令闻不已。矢其文德②，洽此四国③。
 ①明明：有道之貌。王念孙以为“勉勉”之音转，即勤勉。
 ②矢：施，陈。
 ③洽：协和。
-【译文】
-天子勤勉又清明，美好声誉永传扬。施行文明行德政，四方国家俱安康。
-常武
+> 天子勤勉又清明，美好声誉永传扬。施行文明行德政，四方国家俱安康。
+### 常武
 王旅啴啴①，如飞如翰②，如江如汉，如山之苞③，如川之流。
 ①啴啴（tān）：众多貌。
 ②翰：高飞。郑笺：“翰，鸟中豪俊也。”
 ③苞：根本。郑笺：“山本，以喻不可惊动。”孔疏：“其固守则不可惊动，如山之基本。”
-【译文】
-王师威武人众多，进军神速如鸟翔。如江如汉势汹涌，如山如岳立得定，有如洪流不可挡。
-瞻卬
+> 王师威武人众多，进军神速如鸟翔。如江如汉势汹涌，如山如岳立得定，有如洪流不可挡。
+### 瞻卬
 邦靡有定，士民其瘵①。蟊贼蟊疾②，靡有夷届③。罪罟不收④，靡有夷瘳⑤。
 ①士民：士卒百姓。瘵（zhài）：病，指忧患。
 ②蟊贼：吃庄稼的害虫。蟊疾：啃吃庄稼。此言蟊贼为害。
 ③夷：平。届：终极。
 ④罪罟（gǔ）：即有罪之人。收：收敛。
 ⑤瘳（chōu）：病愈。此指停歇。
-【译文】
-国家没有安定时，士民大众受苦难。蟊贼残害众生灵，痛苦接连没个完。罪犯歹徒不逮捕，百姓生活不平安。
+> 国家没有安定时，士民大众受苦难。蟊贼残害众生灵，痛苦接连没个完。罪犯歹徒不逮捕，百姓生活不平安。
 妇有长舌①，维厉之阶②。乱匪降自天③，生自妇人。
 ①妇：此指褒姒。长舌：郑笺：“喻多言语。”
 ②厉：灾祸。
 ③匪：非，不是。
-【译文】
-搬弄是非靠长舌，造祸生事她本领。祸乱不是从天降，邪恶缘自妇人生。
+> 搬弄是非靠长舌，造祸生事她本领。祸乱不是从天降，邪恶缘自妇人生。
 人之云亡①，邦国殄瘁②。
 ①云：语助词。亡：逃亡。
 ②殄（tiǎn）瘁：困病。马瑞辰《毛诗传笺通释》：“殄、瘁二字平列，与尽瘁、憔悴之同为劳病正同。”
-【译文】
-贤人忠臣都跑光，国家困顿将灭亡。
-召旻
+> 贤人忠臣都跑光，国家困顿将灭亡。
+### 召旻
 池之竭矣①，不云自频②。泉之竭矣，不云自中③。
 ①竭：干涸。
 ②频：当从《鲁诗》作“滨”，水边。
 ③中：指泉水的中间。朱熹《诗集传》：“池之竭由外之不入，泉之竭由内之不出，言祸乱有所从起。”
-【译文】
-池中之水逐渐干，没有流水注里边。喷泉之水逐渐枯，泉眼里面源头断。
-周颂维天之命
+> 池中之水逐渐干，没有流水注里边。喷泉之水逐渐枯，泉眼里面源头断。
+## 周颂
+### 维天之命
 维天之命①，於穆不已②。
 ①维：语助词。一说“思念”。
 ②於（wū）：赞叹词。穆：肃穆。不已：不止。指天道运行无止。
-【译文】
-想那天道的运行，美好肃穆永不停。
-烈文
+> 想那天道的运行，美好肃穆永不停。
+### 烈文
 无竞维人①，四方其训之②。不显维德，百辟其刑之③。
 ①竞：强。
 ②训：服从。一说训“效”。
 ③刑：通“型”，模范。
-【译文】
-国强全靠有贤人，四方才会来归降。先祖伟大在美德，诸君应当为榜样。
-时迈
+> 国强全靠有贤人，四方才会来归降。先祖伟大在美德，诸君应当为榜样。
+### 时迈
 载戢干戈①，载櫜弓矢②。我求懿德③，肆于时夏④。
 ①戢（jí）：收藏兵器。干戈：泛指兵器。
 ②櫜（gāo）：盛衣甲、弓矢的袋子。郑笺：“王巡守而天下咸服，兵不复用，此又著震叠之效也。”
 ③懿德：美德。 ④肆：施行。时：是，此。夏：中国。朱熹《诗集传》：“夏，中国也。言求懿美之德以布陈于中国。”
-【译文】
-收起干戈和兵甲，强弓利箭装入囊。讲求美好的道德，遍施中国各地方。
-敬之
+> 收起干戈和兵甲，强弓利箭装入囊。讲求美好的道德，遍施中国各地方。
+### 敬之
 敬之敬之①，天维显思②，命不易哉③。
 ①敬：通“警”，警戒。之：语气词。
 ②维：是。显：明察。思：语气词。
 ③命：天命。不易：指天命不容易获得。
-【译文】
-要警惕呀要警惕，上天明察不可欺，赢得天命实不易。
+> 要警惕呀要警惕，上天明察不可欺，赢得天命实不易。
 无曰高高在上，陟降厥士①，日监在兹②。
 ①陟降厥士：上天往来天地之间。陟降，升降。厥，其。士，事。或以为“士”当作“土”。
 ②日：天天。监：监视。兹：此，指人间。
-【译文】
-莫说上天很高远，上下行事很迅疾，天天监视我和你。
+> 莫说上天很高远，上下行事很迅疾，天天监视我和你。
 日就月将①，学有缉熙于光明②。
 ①日就月将：日有所得，月有所进。就，成就。将，进。
 ②缉熙：积渐以至于光明。后以缉熙谓光明。
-【译文】
-日有所成月月进，学习积累渐明晰。
-鲁颂
-有
+> 日有所成月月进，学习积累渐明晰。
+## 鲁颂
+### 有
 夙夜在公①，在公明明②。
 ①夙夜在公：指早晚为公家之事奔忙。
 ②明明：即“勉勉”，勤勉之貌。马瑞辰《毛诗传笺通释》：
 “明，勉一声之转，明明即勉勉之假借，谓其在公尽力也。”
-【译文】
-早起晚睡办公事，勤勉努力为公忙。
-泮水
+> 早起晚睡办公事，勤勉努力为公忙。
+### 泮水
 载色载笑①，匪怒伊教②。
 ①载色载笑：又高兴又谈笑。载，乃，又。色，和颜悦色。
 ②匪怒伊教：不是怒颜对人，而是温和地教导臣下。
-【译文】
-面色温和脸带笑，从不发怒只教导。
-商颂
-那
+> 面色温和脸带笑，从不发怒只教导。
+## 商颂
+### 那
 温恭朝夕①，执事有恪②。
 ①温恭：温文恭敬。
 ②有恪（kè）：即“恪恪”，恭敬的样子。
-【译文】
-朝夕温和又恭敬，做事虔诚又敬谨。
-长发
+> 朝夕温和又恭敬，做事虔诚又敬谨。
+### 长发
 不竞不 ①，不刚不柔，敷政优优②，百禄是遒③。
 ① （qiú）：毛传：“ ，急也。”一说，求也。
 ②敷政：施政。优优：宽和貌。
 ③遒：聚集。
-【译文】
-不用竞争不急求，不必刚硬不必柔，政令施行很宽优，福禄聚集如山丘。
-殷武
+> 不用竞争不急求，不必刚硬不必柔，政令施行很宽优，福禄聚集如山丘。
+### 殷武
 天命降监①，下民有严②。不僭不滥③，不敢怠遑④。
 ①降监：下察人民。降，下。监，监察。
 ②下民：天下的人民。有严：即“严严”，守法谨严貌。
 ③僭：越礼。滥：放纵，恣意妄为。
 ④怠遑：懒惰偷闲。
-【译文】
-上天命他降人间，下民敬畏他威严。不敢越礼不放纵，不敢懈怠不偷闲。
+> 上天命他降人间，下民敬畏他威严。不敢越礼不放纵，不敢懈怠不偷闲。
