--- a/_posts/2022-12-27-仪礼札记.md
+++ b/_posts/2022-12-27-仪礼札记.md
@@ -14,23 +14,18 @@ date: 2022-12-27 11:44:01
 弃尔幼志①，顺尔成德②。
 ①尔：汝。幼志：幼年时的戏玩之心，犹言童心。
 ②顺：通“慎”。成德：成人之德。胡培翚云：“既冠，责以为人子、为人弟、为人臣、为人少者之礼，皆成人之德也。”
-【译文】
-丢掉你的童稚之心，慎养你的成人之德。
+> 丢掉你的童稚之心，慎养你的成人之德。
 敬尔威仪，淑慎尔德①。
 ①淑：善。
-【译文】
-不要懈怠你外表的威仪，好好慎养你内在的德行。
+> 不要懈怠你外表的威仪，好好慎养你内在的德行。
 孝友时格①，永乃保之。
 ①孝友：郑注：“善父母为孝，善友弟为友。”时：通“是”。
 格：至，来。
-【译文】
-谨守孝友，永远保持。
+> 谨守孝友，永远保持。
 天下无生而贵者也。
-【译文】
-天下没有生下来就尊贵的人。
+> 天下没有生下来就尊贵的人。
 以官爵人，德之杀也①。
-①杀：差，等差。郑注：“杀犹衰也。德大者爵以大官，德小者爵以小官。” 【译文】
-用官位爵人，要以德行高低分等级。
+①杀：差，等差。郑注：“杀犹衰也。德大者爵以大官，德小者爵以小官。” > 用官位爵人，要以德行高低分等级。
 士相见礼
 凡言①，非对也②，妥而后传言③。与君言，言使臣；与大人言④，言事君；与老者言，言使弟子；与幼者言，言孝弟于父兄；与众言，言忠信慈祥；与居官者言⑤，言忠信。
 ①凡言：本节论述燕见时言谈的礼节。
@@ -42,24 +37,19 @@ date: 2022-12-27 11:44:01
 聘礼
 久无事①，则聘焉。
 ①事：指盟会之类的活动。
-【译文】
-诸侯之间如果很久没有盟会，则应该派使者互相聘问。
+> 诸侯之间如果很久没有盟会，则应该派使者互相聘问。
 辞无常，孙而说①。
 ①孙：通“逊”，顺于心意。说：通“悦”。
-【译文】
-聘问的辞令没有固定的内容，只要顺从对方心愿，并且使他愉悦即可。
+> 聘问的辞令没有固定的内容，只要顺从对方心愿，并且使他愉悦即可。
 辞多则史①，少则不达。辞苟足以达，义之至也。
 ①史：策祝。古代祭祀或求神时，以简册祝告鬼神。
-【译文】
-辞令若太啰嗦，就有点像宗庙中的策祝了；若太少，则又不足以表达意思。如果辞令能足以表达意思就止，那就是应答场合中的极致水平了。
+> 辞令若太啰嗦，就有点像宗庙中的策祝了；若太少，则又不足以表达意思。如果辞令能足以表达意思就止，那就是应答场合中的极致水平了。
 多货，则伤于德。币美，则没礼。贿，在聘于贿①。
 ①在聘于贿：视聘礼的厚薄决定回赠的费用水平。
 【译文】聘问的目的在于礼，而不在于礼物的多少、好坏，如果陈设的玉器太多，则变成以玉为主，势必有伤于德行。如果束帛太美，则礼的本意就会被淹没。回赠给对方的礼物，视对方带来的礼物而定，厚薄要相称。
 丧服
 名者，人治之大者也，可无慎乎？
-【译文】
-名分，是人君之治中 重要的，能不慎重吗？
+> 名分，是人君之治中 重要的，能不慎重吗？
 士虞礼
 夙兴夜处，小心畏忌，不惰其身，不宁。
-【译文】
-从早起到夜居，小心畏忌，不敢怠惰其身，不敢安宁。
+> 从早起到夜居，小心畏忌，不敢怠惰其身，不敢安宁。
